--- a/daepan/3주차.md
+++ b/daepan/3주차.md
@@ -135,7 +135,7 @@ Process ID의 약자로,
 
 </br>
 
-> 통신 동작에 이용하는 제어 정보
+> 통신 동작에 이용하는 제어 정보 </br>
 > * 헤더에 기입되는 정보
 > * 소켓에 기록되는 정보
 
@@ -151,7 +151,7 @@ Process ID의 약자로,
 </br>
 
 > SYN: 컨트롤 비트 중 하나, SYN의 의미는 Synchronize의 약자로 연결 설정을 담당한다.
-
+</br>
 
 
 # 접속의 의미: 3-way handshake
@@ -178,31 +178,41 @@ Process ID의 약자로,
 connnect를 사용하여 운반을 패킷을 운반하게 되는데 이떄 패킷을 어떤 데이터를 어느 정도의 크기로 제한해서 보낼지를 정하게 된다.
 각 OS마다 패킷에 대한 규격의 크기를 설정하게된다.
 
+</br>
+
 패킷 크기에 대한 용어로
 > MTU: 패킷 한 개로 운반할 수 있는 디지털 데이터의 최대길이, 이더넷 기준으로 1500바이트이다.</br> 
-> MSS: 헤더를 제외하고 한개의 패킷으로 운반할 수 있는 TCP 데이터의 최대길이
+> MSS: 헤더를 제외하고 한개의 패킷으로 운반할 수 있는 TCP 데이터의 최대길이 </br>
 가 있다.
+</br>
 
 **MTU**는 IP헤더 + TCP 헤더 +  데이터 이고,
 위 예시에서의 데이터의 최대크기가 **MSS**라는 것이다.
+</br>
 
 ## 송수신 하는 패킷에 대한 고찰
 이렇게 패킷이 데이터를 전송하는 형태라는 것은 이해되지만 데이터 전송과 관련해서 전송속도에 대한 고민을 하게 된다.
+</br>
 
 이 전송 속도와 관련해서는 **가변적인 MSS의 크기**와 **최대전송지연시간을 설정하는 것**이다.
 당연하게도 MSS의 크기가 커지게 될 경우 한번 통신에서 많은 데이터르 전송할 수 있어 네트워크의 효율이 높아지기는 하지만,
 버퍼에 데이터를 저장하는 등의 추가적인 작업이 커저 전송시간 지연이 늘어날 것이다.
 하지만 이 저장하는 과정에서 OS에서 지정한 최대전송지연시간이 경과하면 패킷을 전송하도록 하는 식으로 대처할 수 있다.
+</br>
+</br>
 
 
 이렇게 서로 의미가 상충하기에 이 둘을 잘 고민하여 사용하는 것이 개발자의 몫으로 남아 있다.
 - 기회가 된다면 이와 관련된 프로그래밍에 대해 해보고 싶다!
+</br>
 
 ## 데이터 분할을 통한 수신
 기본적으로 애플리케이션의 데이터는 위에서 제시했던 1500바이트 보다 훨씬 큰 경우가 매우 매우 많다.
 그렇기에 이런 데이터를 분할하여 전송하게된다.
+</br>
 
 그렇다면 분할하는 방식은 어떻게 될까?
+</br>
 
 HTTP 데이터 송신 과정을 예로 들어 설명하면 
 ```
@@ -210,59 +220,74 @@ HTTP 데이터 송신 과정을 예로 들어 설명하면
 ```
 이렇게 되어 있다면, TCP가 메시지 본문을 분할하여 조각[MSS의 크기]을 생성하고 헤더를 생성한다.
 물론 IP 헤더도 같이 작업이 들어갈 것이다.
+</br>
+
 ```
 [IP 헤더][TCP 헤더][조각 1]
 [IP 헤더][TCP 헤더][조각 2]
 [IP 헤더][TCP 헤더][조각 3]
 ...//
 ```
+</br>
 
 그렇다면 이렇게 데이터를 전송하면서 나눠진 데이터를 다시 합치게 될 떄 섞여 있거나 어느것은 잘 도착하고 안했는지 
 컴퓨터가 알 수 있게 하기 위해 송신하는 각 데이터마다 시퀀스 번호라는 것을 부여한다.
+</br>
 
 이 시퀀스 번호는 데이터 조각을 분할할 때 몇번째 바이트에 해당하는지를 알려준다.
 그리고 시퀀스 번호와 패킷의 데이터 길이를 더하여 **ACK 번호**를 부여하게된다.
+</br>
 
 3-way ShakeHand에서 SYN 시작 과정에서 초기 시퀀스 번호를 교환한다는 것은 결국 이 시퀀스 번호부터 데이터를 보내겠다는 의미로 해석하면 된다.
 수신자 : '여기(시퀀스 번호)부터 데이터를 줄거야!'
 송신자 : OK
+</br>
 
 그리고 이 ACK를 수신받은 수신자는 다시 송신자에게 이 ACK 번호까지 받았다고 한번 더 수신자에게 수신 확인 응답을 보내게된다.
+</br>
 
 ## 패킷 송수신 과정에서의 오류 복구
 패킷 송수신 과정에서 오류가 발생할 경우가 분명 있을 것이다.
 그렇다면 이 복구 과정은 어떻게 일어날까?
+</br>
 
 기본적으로 패킷을 송신하는 호스트는 송신하는 패킷을 송신용 버퍼 메모리에 미리 저장해둔다.
 만약 패킷을 송신하고 잘못된 응답, 응답이 없는 경우 송신측에서는 다시 한번 보내어 오류복구를 시도할 것이다.
 이렇게 시도하다가 일정 수준 이상의 시도가 지나게 되면 애플리케이션에게 에러처리를 하도록 지시한다.
+</br>
 
 물론 이 과정에서는 많은 생각이 필요하긴하다.
 쪼개진 데이터를 보내고 ACK가 돌아오는 시간을 어느정도로 잡아야하는가를 고민하게된다.
 이 시간을 **타임아웃 값**이라고 하는데,
 이 값을 너무 늦게 혹은 짧게 할 경우 ACK 통신 과정에서 계속해서 반복적으로 보내게 되는 경우가 있어
 수신하는 데이터가 혼잡하게 될 것이다.
+</br>
 
 그래서 이에 대한 해결방법으로는 초기 연결과정에서 응답 시간에 대해서 돌아오는 시간을 계측하여 예상하는 동적인 방법을 많이 사용한다.
+</br>
 
 
 ## 데이터 송신 과정: 핑퐁, 윈도우 제어방식
-
 데이터 통신 방식에서 ACK를 통해 데이터가 어디까지 주고 받았는지를 확인하게 되는데,
 여기서 두 가지 방식이 있다.
+</br>
 
 **핑퐁**방식은 데이터 송신 이후 수신 확인 응답이 한 과정이 주고 받고식의 송신이다.
 이때 수신 응답 과정에서 응답을 기다리는 과정에서 시간이 낭비된다.
+</br>
 
 그래서 윈도우 제어방식을 주로 활용하는 것이 좋은데
 이 방식은 수신측과 송신측의 메모리 영역을 통해 최대 얼만큼의 데이터를 주고 받을지를 설정하는 것이다.
+</br>
 
 1. 송신자는 현재 수신자가 사용할 수 있는 메모리 영역의 크기를 받는다.
 2. 송신자는 수신자가 준 메모리 영역만큼의 데이터를 송신하다.
 3. 수신자는 계속해서 송신되는 데이터들을 처리하고, 응답에 대해서 현재 사용가능한 메모리 영역의 크기를 보내준다.
+</br>
 
 이렇게 송신자와 수신자 간의 사용가능한 메모리 영역을 주고 받음으로써 계속해서 지연시간을 최소화하는 
 방법이 **윈도우 제어방식** 이다.
+</br>
 
 
 # 연결 해제와 소켓 말소: 4-way handshake
