--- a/weweweme/2주차.md
+++ b/weweweme/2주차.md
@@ -13,7 +13,7 @@
     - A: IPv4 주소를 나타낸다(192.0.2.1).
     - AAAA: IPv6 주소를 나타낸다 (2001:0db8::1).
     - MX: 메일 교환기를 나타낸다(mail.example.com).
-    - CNAME: 다른 도메인 이름을 나타낸다(www.example.com은 example.com으로 매핑).
+    - CNAME: 다른 도메인 이름을 나타낸다(www.example.com 은 example.com 으로 매핑).
     - 그 외 다양한 타입에 대한 정보는 다음의 [링크](https://docs.aws.amazon.com/ko_kr/Route53/latest/DeveloperGuide/ResourceRecordTypes.html)를 참고한다.
   - 이 이름, 클래스, 타입 등에 대한 정보를 **리소스 레코드** 라고 한다.
 
@@ -37,25 +37,38 @@
 - DNS 서버는 계층적 구조를 가진 다른 DNS 서버와 협력하여 정보를 찾아낸다.
 - 도메인 이름은 계층적 구조를 가지고 있으며, 각 계층은 점 (.)으로 구분된다.
   - www.example.com에서 com은 최상위 도메인, example은 두 번째 레벨 도메인, www은 세 번째 레벨 도메인이다.
+- 계층 구조를 취함으로서 빠르고 효율적인 검색을 가능하게 한다. 
+  - 질의가 명확하게 특정 서버 또는 서버 그룹에게만 전달되기 때문에, 모든 서버를 검색할 필요가 없어진다.
 - DNS에서 취급하는 이름의 계층은 오른쪽에서 왼쪽으로 읽힌다. 즉, 오른쪽에 위치한 이름이 상위 계층을 의미한다.
 
 ### 1.3.3. 담당 DNS 서버를 찾아 IP 주소를 가져온다
 
 - 핵심은 액세스 대상의 웹 서버가 어느 DNS에 등록되어 있는지 찾아내는 것이다.
 - 찾아내기 위해 고안한 방법이 바로 계층 구조이다.
-- **최상위 도메인(TLDs; Top-Level Domains)** 은 도메인 이름의 가장 끝, 즉 가장 오른쪽에 위치한 부분이다. **루트 도메인** 이라고도 한다.
-  - 일반 도메인(gTLDs; Generic Top-Level Domains) : 제한 없이 누구나 등록할 수 있는 도메인(.com, .org, .net)
-  - 국가 도메인(ccTLDs; Country Code Top-Level Domains) : 특정 국가 또는 지역에 할당된 도메인(.us, .kr)
+
+#### 루트 도메인(Root Domains)
+- 루트 도메인은 DNS(Domain Name System) 계층 구조의 가장 상위에 위치한다.
+- 루트 도메인 자체는 보통 빈 문자열로 표현되며, 모든 도메인 이름의 끝에 암묵적으로 존재한다. 
+  - 일반 사용자는 이를 보통 볼 일이 거의 없다.
+  > www.google.com. 에서 마지막의 '.'이 루트 도메인을 나타낸다.
+- 루트 네임 서버는 루트 도메인을 관리하며, 하위 도메인의 정보를 알고 있는 TLD 서버를 가리킬 수 있다.
+
+#### 최상위 도메인 (TLDs; Top-Level Domains)
+- 최상위 도메인은 도메인 이름의 가장 오른쪽에 위치한 부분이다.
+- 일반적으로 두 종류의 TLD가 있다.
+  - 일반 도메인(gTLDs; Generic Top-Level Domains) : 제한 없이 누구나 등록할 수 있는 도메인 (.com, .org, .net 등)
+  - 국가 도메인(ccTLDs; Country Code Top-Level Domains) : 특정 국가 또는 지역에 할당된 도메인 (.us, .kr, .uk 등)
 
 ![DNS 서버와 네임 서버에 의한 IP 주소 조회](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbwDkIw%2FbtqNVTGV9Ar%2FD6w3guBAUsphSffuQagCkk%2Fimg.png)
 
 - 도메인 계층을 따라 질의 과정을 반복하여 찾고자 하는 도메인의 IP 주소를 찾는데, 그 과정은 다음과 같다.
-  - 사용자 질의 : 웹 브라우저에 www.google.com을 입력하면, 사용자의 컴퓨터가 DNS 서버에 IP 주소를 물어본다.
-  - 루트 서버 확인 : DNS 서버는 루트 네임 서버에 가서 어디서 IP 정보를 찾을 수 있는지 물어본다.
-  - TLD 서버 확인 : 루트 서버는 .com 네임 서버로 가라고 가이드하고, DNS 서버는 그곳에서 google.com의 DNS 서버 정보를 얻는다.
-  - 최종 IP 주소 확인 : DNS 서버는 google.com의 DNS 서버에 가서 www.google.com의 IP 주소를 얻는다.
-  - IP 주소 제공 : 이제 DNS 서버는 얻은 IP 주소를 사용자에게 전달한다.
-  - 캐싱 : 같은 요청이 또 들어오면, 이전에 찾은 정보를 빠르게 제공하기 위해 IP 주소를 임시 저장한다.
+  1. 사용자 질의 : 웹 브라우저에 www.google.com을 입력하면, 사용자의 컴퓨터가 DNS 서버에 IP 주소를 물어본다.
+  2. 루트 서버 확인 : DNS 서버는 루트 네임 서버에 가서 어디서 IP 정보를 찾을 수 있는지 물어본다.
+  3. TLD 서버 확인 : 루트 서버는 .com 네임 서버로 가라고 가이드하고, DNS 서버는 그곳에서 google.com의 DNS 서버 정보를 얻는다.
+  4. 최종 IP 주소 확인 : DNS 서버는 google.com의 DNS 서버에 가서 www.google.com의 IP 주소를 얻는다.
+  5. IP 주소 제공 : 이제 DNS 서버는 얻은 IP 주소를 사용자에게 전달한다.
+  6. 캐싱 : 같은 요청이 또 들어오면, 이전에 찾은 정보를 빠르게 제공하기 위해 IP 주소를 임시 저장한다.
+    - 이 임시 저장된 정보는 TTL(Time-To-Live)이라는 시간 값에 따라 일정 시간 동안만 유효하다.
 
 ### 1.3.4. DNS 서버는 캐시 기능으로 빠르게 회답할 수 있다
 
@@ -77,11 +90,11 @@
 - 클라이언트와 서버측 양쪽에서 소켓을 만들고, 클라이언트측 소켓은 서버측의 소켓에 연결을 수립한다.
 - 통신이 끝나면, 데이터 통로는 분리된다. 특히 TCP의 경우, 양쪽 모두에서 정확한 연결 해제 과정을 거친다.
 - 통신 프로세스 정리
-  - 소켓을 만들고, 종류와 포트를 선택한다.
-  - 클라이언트측의 소켓이 서버측의 소켓에 연결을 수립한다.
-  - 데이터를 양방향으로 송 수신한다.
-  - 통신이 완료되면, 데이터 통로를 분리하고 소켓을 해제한다.
-  - 이러한 과정은 OS 내부의 프로토콜 스택에서 처리된다.
+  1. 소켓을 만들고, 종류와 포트를 선택한다.
+  2. 클라이언트측의 소켓이 서버측의 소켓에 연결을 수립한다.
+  3. 데이터를 양방향으로 송 수신한다.
+  4. 통신이 완료되면, 데이터 통로를 분리하고 소켓을 해제한다.
+  5. 이러한 과정은 OS 내부의 프로토콜 스택에서 처리된다.
 
 ### 1.4.2. 소켓의 작성 단계
 
@@ -128,7 +141,7 @@
 #### HTTP 프로토콜에서의 연결 종료
 
 - 일반적으로 HTTP/1.0에서는 웹 서버가 응답 메시지의 송신을 완료하면 Close를 호출하여 연결을 끊는다.
-  - HTTP/1.1 버전부터는 keep-alive 메커니즘을 통해 연결을 유지할 수도 있다.
+  - HTTP/1.1 버전부터는 [keep-alive](https://etloveguitar.tistory.com/137) 메커니즘을 통해 연결을 유지할 수도 있다.
 - 웹 서버가 먼저 Close를 호출하면, 클라이언트는 이 정보를 받아 Read 함수를 호출할 때 0을 반환받아 연결이 종료되었음을 확인한다.
   - 이러한 동작은 HTTP 프로토콜에 국한된 사항일 수 있다.
 - 연결이 종료되었음을 확인한 클라이언트는 그 후 자신도 Close를 호출하여 연결을 종료하고, 리소스를 반환한다.
