이미지 추가, 내용 수정

--- a/weweweme/2주차.md
+++ b/weweweme/2주차.md
@@ -2,20 +2,23 @@
 
 ### 1.3.1. DNS 서버의 기본 동작
 
+![DNS 조회 메시지](http://www.ktword.co.kr/img_data/4889_1.jpg)
+
 - DNS 서버의 기본 동작은 클라이언트에서 조회 메시지를 받고 응답하는 형태이다.
-- 조회 메시지에는 세 가지 정보가 포함되어 있다.
-  - 이름 : 도메인 이름을 나타내며, 일반적으로 웹 서버의 위치나 메일 서버 등의 리소스를 찾기 위해 사용된다.
-    - 웹 서버 : www.example.com
-    - 메일 주소에서 @ 뒷부분 : example.com
-  - 클래스 : 네트워크의 종류를 나타낸다.
-    - 인터넷 클래스 : IN (거의 표준처럼 사용되고 있음)
-  - 타입 : 이름에 어떤 타입의 데이터가 지원되는지를 나타낸다.
-    - A: IPv4 주소를 나타낸다(192.0.2.1).
-    - AAAA: IPv6 주소를 나타낸다 (2001:0db8::1).
-    - MX: 메일 교환기를 나타낸다(mail.example.com).
-    - CNAME: 다른 도메인 이름을 나타낸다(www.example.com 은 example.com 으로 매핑).
-    - 그 외 다양한 타입에 대한 정보는 다음의 [링크](https://docs.aws.amazon.com/ko_kr/Route53/latest/DeveloperGuide/ResourceRecordTypes.html)를 참고한다.
-  - 이 이름, 클래스, 타입 등에 대한 정보를 **리소스 레코드** 라고 한다.
+
+#### 리소스 레코드(RR; Resource Record)
+- 조회 메시지에는 이름, 클래스, 타입 등 세 가지 데이터가 포함되어 있으며 이를 리소스 레코드라고 한다.
+- 이름 : 도메인 이름을 나타내며, 일반적으로 웹 서버의 위치나 메일 서버 등의 리소스를 찾기 위해 사용된다.
+  - 웹 서버 : www.example.com
+  - 메일 주소에서 @ 뒷부분 : example.com
+- 클래스 : 네트워크의 종류를 나타낸다.
+  - 인터넷 클래스 : IN (거의 표준처럼 사용되고 있음)
+- 타입 : 이름에 어떤 타입의 데이터가 지원되는지를 나타낸다.
+  - A: IPv4 주소를 나타낸다(192.0.2.1).
+  - AAAA: IPv6 주소를 나타낸다 (2001:0db8::1).
+  - MX: 메일 교환기를 나타낸다(mail.example.com).
+  - CNAME: 다른 도메인 이름을 나타낸다(www.example.com 은 example.com 으로 매핑).
+  - 그 외 다양한 타입에 대한 정보는 다음의 [링크](https://docs.aws.amazon.com/ko_kr/Route53/latest/DeveloperGuide/ResourceRecordTypes.html)를 참고한다.
 
 > 예시
 >
@@ -147,3 +150,8 @@
 - 연결이 종료되었음을 확인한 클라이언트는 그 후 자신도 Close를 호출하여 연결을 종료하고, 리소스를 반환한다.
 
 ![소켓의 송 수신 과정](https://velog.velcdn.com/images/dogfootbirdfoot/post/7a1416ca-3a11-49b5-bb06-e3ea99accda8/image.jpg)
+
+---
+
+# 참고자료
+- [DNS 질의 메시지 - kt정보통신기술용어해설](http://www.ktword.co.kr/test/view/view.php?m_temp1=4889)
