피드백 반영

--- a/weweweme/3주차.md
+++ b/weweweme/3주차.md
@@ -27,6 +27,10 @@
 - 로컬 네트워크에서 IP 주소를 해당 MAC 주소로 변환하는 프로토콜이다.
 - 네트워크 상에서 장비가 처음 통신할 때 MAC 주소를 알아내기 위해 사용된다.
 - 알아낸 IP와 MAC 주소의 매핑 정보를 ARP 테이블에 저장한다.
+- ARP 요청은 브로드캐스트 방식으로 전송되며, 이를 통해 특정 IP 주소를 가진 장비를 찾는다.
+  - 브로드캐스트(Broadcast) : 네트워크 내의 모든 장비에 데이터를 전송하는 방식이다.
+- ARP 응답은 유니캐스트 방식으로 전송되며, 요청을 보낸 장비만이 이 응답을 받는다.
+  - 유니캐스트(Unicast) : 특정한 하나의 장비에만 데이터를 전송하는 방식이다.
 
 #### MAC 주소(Media Access Control Address)
 - 하드웨어 장치를 고유하게 식별하기 위한 주소이다.
