가독성에 도움을 줄 내용 추가

--- a/weweweme/3주차.md
+++ b/weweweme/3주차.md
@@ -226,9 +226,21 @@
 
 
 
-## 2.3. 데이터를 송 수신한다(TCP 프로토콜 기반)
-- 소켓이 연결된 메시지를 송신하는 단계이다.
+## 2.3. 데이터를 송・수신한다(TCP 프로토콜 기반)
 - 이 섹션은 TCP 프로토콜을 기반으로 소켓이 연결된 후 메시지를 송신하는 단계에 대해 설명한다.
+- 특히, TCP는 데이터 전송의 정확성과 효율성을 위해 다음 세 가지 주요 메커니즘을 활용한다.
+  - 오류제어(Error Control)
+    - TCP는 데이터 패킷을 정확하게 전송하기 위해 ACK(Acknowledgement) 메시지를 사용한다.
+    - 수신된 패킷이 손상되었거나 잘못된 경우, 수신측은 ACK를 보내지 않으며, 이 경우 송신측은 타임아웃 후 해당 패킷을 다시 전송한다.
+  - 흐름제어(Flow Control)
+    - TCP는 데이터의 흐름을 제어하기 위해 "윈도우 제어" 메커니즘을 사용한다.
+    - 수신 버퍼가 가득 차지 않도록 수신 가능한 데이터 양을 조절한다.
+    - 이를 통해 높은 네트워크 효율성과 빠른 데이터 전송을 가능하게 한다.
+  - 혼잡제어(Congestion Control)
+    - 네트워크 내의 다른 트래픽과의 충돌을 방지하기 위해 혼잡제어 알고리즘을 사용한다.
+    - 예를 들어, 네트워크 혼잡 시 패킷 전송 속도를 줄이거나 패킷 크기를 조절한다.
+    - 이러한 동작은 네트워크 리소스를 효율적으로 사용하며, 패킷 손실을 최소화한다.
+  - 이러한 메커니즘을 염두에 두고 데이터 송・수신 과정을 살펴본다.
 
 ### 2.3.1. 프로토콜 스택에 HTTP 리퀘스트 메시지를 넘긴다
 - 애플리케이션은 송신할 데이터를 TCP 프로토콜 스택에 전달한다.
