--- a/daepan/4주차.md
+++ b/daepan/4주차.md
@@ -42,11 +42,66 @@
    - **수신**:
      1. 패킷이 목적지 컴퓨터에 도착하면, 컴퓨터는 MAC 헤더와 IP 헤더를 확인하고, 패킷의 데이터를 추출하고 원래의 데이터로 재조립한다.
 
+## 3. 패킷 통신은 지나가는 모든 IP와 MAC 주소를 기록한다.
+## 4. 이더넷의 기본
+- 다수의 컴퓨터가 여러 상대와 자유롭게 적은 비요응로 통신하기 위해 고안된 통신 기술
 
-## 3. 이더넷의 기본
+1. 10BASE5 (Thick Ethernet 또는 ThickNet)
+* 최초의 표준 이더넷 형태로, 트랜시버 케이블을 사용합니다.
+* '10'은 10 Mbps의 전송 속도, 'BASE'는 기저 대역 신호. '5'는 최대 선로 길이가 500m를 의미함.
+* 대형 동축 케이블에 "뱀프"라 불리는 커넥터를 사용하여 연결되는 특성이 있었습니다.
 
-## 4. LAN 어댑터의 역할
+2. 10BASE-T (Twisted Pair Ethernet)
+* Twisted Pair 케이블을 사용하는 이더넷 형태입니다.
+* RJ-45 커넥터를 사용하여 장치를 연결합니다.
+* 'T'는 Twisted Pair의 약자임.
+* 이 형태는 스타 토폴로지를 사용하여 허브 또는 스위치에 여러 장치를 연결할 수 있습니다.
 
-## 5. IP에서 TCP로의 패킷 이동
+3. 스위칭 허브(Switching Hub)
+* 일반적으로 "스위치"라고도 불리는 이 장치는 로컬 영역 네트워크 (LAN) 내의 데이터 프레임을 특정 목적지로 전송하기 위해 사용된다. 
+* 네트워크 내의 데이터 트래픽을 효율적으로 관리하고 성능을 향상시키기 위해 설계된 고성능 네트워크 기기.
 
-## 6. UDP 통신의 이점
+4. 리피터 허브
+* 전통적인 허브의 역할을 수행하면서 동시에 리피터의 기능도 수행하는 네트워크 장치.
+* 연결된 장치들 사이의 네트워크 통신을 가능하게 하면서, 전기적인 신호를 증폭하여 더 긴 거리의 통신도 지원한다.
+* 네트워크 발전에서 네트워크의 범위를 확장하면서도 데이터 전송의 품질을 유지할 수 있도록 기여하였다.
+* 데이터 프레임을 모든 포트에 브로드캐스트하는 단점을 보안하고자, 데이터의 전기적 신호 감쇠를 보상하기 위해 리피터 기능을 사용하여 신호를 증폭하는 기능이 있다.
+
+## 5. LAN 어댑터의 역할
+IP가 만든 패킷은 메모리에 기억된 디지털 데이터이므로, 이를 빛과 전기신호로 변환하여 네트워크 케이블에 송출하는 것이 동작의 본질이라고 할 수 있다.
+그리고 이러한 변환 작업을 하는 것이 **LAN 어댑터**이다.
+
+LAN 어댑터는 전원을 공급하면 초기화 작업을 해야한다.
+이 작업에서 LAN 어댑터는 기록된 MAC 주소는 LAN 드라이버가 MAC 회로에 설정하게 된다.
+
+### 5.1 패킷에 3개의 제어용 데이터
+
+## 6. IP에서 TCP로의 패킷 이동
+
+## 7. UDP 통신
+
+## UDP 통신의 송수신 동작:
+1. 송신: 
+- 애플리케이션은 전송하려는 데이터를 제공합니다. 
+- 이 데이터는 UDP에 의해 데이터그램으로 패키징됩니다.
+- 각 데이터그램에는 소스 포트, 대상 포트, 길이, 체크섬 등의 정보가 포함된 UDP 헤더가 추가됩니다.
+- UDP 데이터그램은 IP 계층으로 전달되어 패킷화되고 네트워크를 통해 목적지로 전송됩니다.
+2. 수신:
+- IP 계층에서 데이터그램이 추출됩니다.
+- UDP 헤더를 확인하여 해당 애플리케이션에 데이터를 전달합니다.
+- UDP와 TCP의 주요 차이점:
+
+### TCP와 UDP 차이점 분석
+* TCP: 
+- 연결 지향적입니다. 데이터 전송을 시작하기 전에 송신자와 수신자 사이에 연결을 설정합니다.
+- 데이터가 순서대로, 에러 없이 목적지에 도달함을 보장합니다. 누락된 패킷은 재전송됩니다.
+- 연결 설정, 데이터 전송 보증, 흐름 제어, 혼잡 제어 등의 기능 때문에 오버헤드가 크며 상대적으로 느립니다.
+- 헤더의 크기가 크다 (20바이트 이상)
+- 데이터의 무결성과 순서가 중요한 웹 브라우징, 파일 전송, 이메일 등의 애플리케이션에서 주로 사용됩니다.
+
+* UDP: 
+- 연결이 설정되지 않은 상태에서 데이터를 전송합니다. 따라서 "비연결형"이라고도 합니다.
+- 데이터 전송을 보장하지 않습니다. 데이터그램은 중복되거나 순서대로 도착하지 않을 수 있으며, 누락될 수도 있습니다.
+- 상기한 기능들이 없기 때문에 오버헤드가 적고 빠른 전송 속도를 제공합니다.
+- 헤더 크기가 작습니다 (8바이트).
+- 낮은 지연 시간이 필요하고 일부 데이터그램의 손실이 허용되는 스트리밍, 온라인 게임, VoIP 등의 애플리케이션에서 주로 사용됩니다.
