--- a/daepan/4주차.md
+++ b/daepan/4주차.md
@@ -10,7 +10,7 @@
 * 페이로드: 전송되어야 하는 실제 데이터. (일반적으로 한 패킷의 페이로드 크기는 한정되어 있기 때문에 큰 데이터는 여러 패킷으로 분할되어 전송됨)
 * 트레일러 (또는 푸터): 종종 오류 검사를 위한 정보를 포함한다.
 ## 2. 패킷 송수신 과정
-네트워크에서 데이터를 전송할 때 패킷의 송수신 과정은 매우 중요한 역할을 합니다. 허브, 라우터, MAC 헤더, IP 헤더의 개념을 통합하여 설명하겠습니다.
+#### 네트워크에서 데이터를 전송할 때 패킷의 송수신 과정은 매우 중요한 역할을 합니다. 허브, 라우터, MAC 헤더, IP 헤더의 개념을 통합하여 정리.
 
 1. **패킷의 구성**: 
    - **MAC 헤더**: 송신자와 수신자의 MAC 주소를 저장한다.
@@ -27,7 +27,7 @@
    - 패킷의 목적지 IP 주소를 확인하고, 라우팅 테이블을 참조하여 해당 패킷을 어디로 전송해야 할지 결정하는 역할.
    - 다양한 네트워크 간의 통신을 가능하게 해주며, 패킷의 효율적인 전송 경로를 결정한다.
 
-4. **패킷의 송수신 과정**:
+### **패킷의 송수신 과정** 정리:
    - **송신**:
      1. 송신 컴퓨터는 데이터를 패킷으로 분할하고, 각 패킷에 MAC 헤더와 IP 헤더를 추가한다.
      2. 이 패킷은 송신 컴퓨터의 NIC(Network Interface Card)를 통해 네트워크에 전송한다.
@@ -41,41 +41,48 @@
 
    - **수신**:
      1. 패킷이 목적지 컴퓨터에 도착하면, 컴퓨터는 MAC 헤더와 IP 헤더를 확인하고, 패킷의 데이터를 추출하고 원래의 데이터로 재조립한다.
+</br>
 
 ## 3. 패킷 통신은 지나가는 모든 IP와 MAC 주소를 기록한다.
+- IP 담당 부분에서 TCP의 의뢰를 의뢰를 받으면 패킷에 IP헤더를 생성한다.
+  * 이 IP헤더에는 송수신 IP 정보가 담긴다.
+이때 송신처 IP 주소는 LAN 어댑터를 판단하여 주소를 설정하게 된다.
+  * 이렇게 하는 이유는 IP주소는 사실 컴퓨터에 할당되는 것이 아닌 LAN 어댑터에 할당되기에 여러개의 어댑터를 장착하여 사용하는 경우 각 LAN 포트마다 IP 주소가 다르게 할당되기 떄문이다.
+
+> 추가적인 내용들에서 라우터 동작에 관해서는 3장에서 추가로 조사!
 ## 4. 이더넷의 기본
 - 다수의 컴퓨터가 여러 상대와 자유롭게 적은 비요응로 통신하기 위해 고안된 통신 기술
 
 1. 10BASE5 (Thick Ethernet 또는 ThickNet)
-* 최초의 표준 이더넷 형태로, 트랜시버 케이블을 사용합니다.
-* '10'은 10 Mbps의 전송 속도, 'BASE'는 기저 대역 신호. '5'는 최대 선로 길이가 500m를 의미함.
-* 대형 동축 케이블에 "뱀프"라 불리는 커넥터를 사용하여 연결되는 특성이 있었습니다.
+  * 최초의 표준 이더넷 형태로, 트랜시버 케이블을 사용.
+  * '10'은 10 Mbps의 전송 속도, 'BASE'는 기저 대역 신호. '5'는 최대 선로 길이가 500m를 의미함.
+  * 대형 동축 케이블에 "뱀프"라 불리는 커넥터를 사용하여 연결되는 특성이 있다.
 
 2. 10BASE-T (Twisted Pair Ethernet)
-* Twisted Pair 케이블을 사용하는 이더넷 형태입니다.
-* RJ-45 커넥터를 사용하여 장치를 연결합니다.
-* 'T'는 Twisted Pair의 약자임.
-* 이 형태는 스타 토폴로지를 사용하여 허브 또는 스위치에 여러 장치를 연결할 수 있습니다.
+  * Twisted Pair 케이블을 사용하는 이더넷 형태입니다.
+  * RJ-45 커넥터를 사용하여 장치를 연결합니다.
+  * 'T'는 Twisted Pair의 약자임.
+  * 이 형태는 스타 토폴로지를 사용하여 허브 또는 스위치에 여러 장치를 연결할 수 있습니다.
 
 3. 스위칭 허브(Switching Hub)
-* 일반적으로 "스위치"라고도 불리는 이 장치는 로컬 영역 네트워크 (LAN) 내의 데이터 프레임을 특정 목적지로 전송하기 위해 사용된다. 
-* 네트워크 내의 데이터 트래픽을 효율적으로 관리하고 성능을 향상시키기 위해 설계된 고성능 네트워크 기기.
+  * 일반적으로 "스위치"라고도 불리는 이 장치는 로컬 영역 네트워크 (LAN) 내의 데이터 프레임을 특정 목적지로 전송하기 위해 사용된다. 
+  * 네트워크 내의 데이터 트래픽을 효율적으로 관리하고 성능을 향상시키기 위해 설계된 고성능 네트워크 기기.
 
 4. 리피터 허브
-* 전통적인 허브의 역할을 수행하면서 동시에 리피터의 기능도 수행하는 네트워크 장치.
-* 연결된 장치들 사이의 네트워크 통신을 가능하게 하면서, 전기적인 신호를 증폭하여 더 긴 거리의 통신도 지원한다.
-* 네트워크 발전에서 네트워크의 범위를 확장하면서도 데이터 전송의 품질을 유지할 수 있도록 기여하였다.
-* 데이터 프레임을 모든 포트에 브로드캐스트하는 단점을 보안하고자, 데이터의 전기적 신호 감쇠를 보상하기 위해 리피터 기능을 사용하여 신호를 증폭하는 기능이 있다.
+  * 전통적인 허브의 역할을 수행하면서 동시에 리피터의 기능도 수행하는 네트워크 장치.
+  * 연결된 장치들 사이의 네트워크 통신을 가능하게 하면서, 전기적인 신호를 증폭하여 더 긴 거리의 통신도 지원한다.
+  * 네트워크 발전에서 네트워크의 범위를 확장하면서도 데이터 전송의 품질을 유지할 수 있도록 기여하였다.
+  * 데이터 프레임을 모든 포트에 브로드캐스트하는 단점을 보안하고자, 데이터의 전기적 신호 감쇠를 보상하기 위해 리피터 기능을 사용하여 신호를 증폭하는 기능이 있다.
 
 ## 5. LAN 어댑터의 역할
-IP가 만든 패킷은 메모리에 기억된 디지털 데이터이므로, 이를 빛과 전기신호로 변환하여 네트워크 케이블에 송출하는 것이 동작의 본질이라고 할 수 있다.
-그리고 이러한 변환 작업을 하는 것이 **LAN 어댑터**이다.
+* IP가 만든 패킷은 메모리에 기억된 디지털 데이터이므로, 이를 빛과 전기신호로 변환하여 네트워크 케이블에 송출하는 것이 동작의 본질이라고 할 수 있다.
+  * 그리고 이러한 변환 작업을 하는 것이 **LAN 어댑터**이다.
 
-LAN 어댑터는 전원을 공급하면 초기화 작업을 해야한다.
-이 작업에서 LAN 어댑터는 기록된 MAC 주소는 LAN 드라이버가 MAC 회로에 설정하게 된다.
+* LAN 어댑터는 전원을 공급하면 통신에 앞서 초기화작업을 진행한다.
+  * 초기화 과정에서 LAN 어댑터는 기록된 MAC 주소를 LAN 드라이버가 MAC 회로에서 새롭게 설정해준다.
 
-LAN어댑터의 구성으로는
-버퍼메모리 - MAC, ROM - PHY - RJ-45 순서의 내부구조를 이루고 있다.
+> LAN어댑터의 구성으로는
+> 버퍼메모리 - MAC, ROM - PHY - RJ-45 순서의 내부구조를 이루고 있다.
 
 ### 5.1 패킷에 3개의 제어용 데이터
 
@@ -84,27 +91,22 @@ LAN어댑터의 구성으로는
 시작에 추가하는 데이터는 **프리앰블**과 **스타트 프레임 딜리미터**
 끝부분에는 **FCS**를 추가한다.
 1. 프리앰블 : 송신하는 패킷을 읽을 떄의 타이밍을 잡기 위한것으로, 101010 과 같은 반복구조의 56비트짜리 비트열
-
-이와 같이 반복적인 구조로 되어 있는 프리앰블을 통해 수신측에서는 이 파형을 통해 수신하는 데이터의 타이밍을 계산하여 받을 수 있다.
-
-특히 0과 1이 반복되는 형태의 데이터의 경우에 별도의 클록이라는 반복 비트 신호와 합성하여, 거리가 멀더라도 데이터 전송의 무결성을 보장한다.
+  * 이와 같이 반복적인 구조로 되어 있는 프리앰블을 통해 수신측에서는 이 파형을 통해 수신하는 데이터의 타이밍을 계산하여 받을 수 있다.
+  * 특히 0과 1이 반복되는 형태의 데이터의 경우에 별도의 클록이라는 반복 비트 신호와 합성하여, 거리가 멀더라도 데이터 전송의 무결성을 보장한다.
 
 조금 이해하기 어려운 부분이었지만 
-> 클록 (Clock):
+> ### 클록 (Clock):
 > 클록은 시스템 또는 장치의 동작 속도와 타이밍을 제어하는 신호입니다. 이는 일정한 주기로 반복되는 펄스 형태로 제공됩니다.
 > 디지털 시스템에서 클록은 데이터를 처리, 저장, 전송할 때의 타이밍을 제어합니다.
 > 클록의 속도는 헤르츠(Hz) 또는 메가헤르츠(MHz), 기가헤르츠(GHz) 등의 단위로 측정됩니다.
-> 프리앰블 (Preamble):
+> ### 프리앰블 (Preamble):
 > 프리앰블은 데이터 전송을 시작하기 전에 전송되는 일련의 비트 패턴입니다.
 > 이 패턴은 주로 수신측이 데이터 스트림의 시작을 인식하고 동기화하기 위해 사용됩니다.
 > 이더넷 통신에서 프리앰블은 일련의 교대로 반복되는 1과 0의 패턴을 포함하며, 이를 통해 수신 장치는 데이터 프레임의 시작을 감지할 수 있습니다.
 
-요약하면, 클록은 시스템의 동작 속도와 타이밍을 제어하는 반면, 프리앰블은 데이터 통신에서 수신 장치가 데이터의 시작을 인식하고 동기화하기 위해 사용되는 비트 패턴이다.
-
-결국 패킷을 전송할 때 데이터 패킷과 관련된 디지털 신호와 함께 클록이라는 디지털 신호도 함께 간다는 것!
-
-그래서 이 둘의 데이터 신호 전송에서 케이블의 거리가 멀어짐에 따라 신호의 혼선으로 클록이나 패킷 데이터가 틀어지게 되는 경우를 해결하기 위해
-이 신호를 합성하여 보낸다는 것이다.
+* 요약하면, 클록은 시스템의 동작 속도와 타이밍을 제어하는 반면, 프리앰블은 데이터 통신에서 수신 장치가 데이터의 시작을 인식하고 동기화하기 위해 사용되는 비트 패턴이다.
+  * 결국 패킷을 전송할 때 데이터 패킷과 관련된 디지털 신호와 함께 클록이라는 디지털 신호도 함께 간다는 것!
+  * 그래서 이 둘의 데이터 신호 전송에서 케이블의 거리가 멀어짐에 따라 신호의 혼선으로 클록이나 패킷 데이터가 틀어지게 되는 경우를 해결하기 위해, 이 신호를 합성하여 보낸다는 것이다.
 
 * 그렇다면 프리앰블은 왜 있는 것인가?
   * 데이터 전송 과정에서 먼저 "자, 이제 데이터를 전송할게"라는 느낌의 클록신호 전송과정의 타이밍을 잡기위해 패킷 앞에 저장한 것이 바로 프리엠블이라는 것이다.
@@ -114,40 +116,40 @@ LAN어댑터의 구성으로는
 - 그렇다면 FCS는 패킷 을 운반하는 도중에 노이즈의 영향으로 파형이 흐트러져 데이터가 변한 경우를 검증하기 위한 도구이다.
 
 ## 6. 패킷 전송의 과정
-이제 패킷이 허브로 이동하는 과정에서 LAN어댑터의 PHY가 성능을 발휘하게 된다.
-PHY는 MAC에 전달받은 패킷을 어느형식으로도 변환할 수 있는 공통형식의 신호로 변환하여 데이터를 전송하는 역할을 한다.
+- 이제 패킷이 허브로 이동하는 과정에서 LAN어댑터의 PHY가 성능을 발휘하게 된다.
+  * PHY는 MAC에 전달받은 패킷을 어느형식으로도 변환할 수 있는 공통형식의 신호로 변환하여 데이터를 전송하는 역할을 한다.
 
-여기서 허브에서 전이중, 반이중모드라는 것이 있는데
-허브에서는 데이터의 송신과 수신 둘 중의 한개만 처리할 수 있는 것이 반이중ㅡ
-둘 다 가능한 것이 전이중이라는 것만 알고 넘어가보자.
+> 여기서 허브에서 전이중, 반이중모드라는 것이 있는데 </br>
+> 허브에서는 데이터의 송신과 수신 둘 중의 한개만 처리할 수 있는 것이 반이중,</br>
+> 둘 다 가능한 것이 전이중이라는 것만 알고 넘어가보자.</br>
 
-만약 반이중 허브에서 송신과 수신이 동시에 에러가 발생하는 경우에는
-이를 에러로 판단한 허브에서 모든 송수신을 멈추기 위해 재밍신호를 흘려 동작을 멈추고 재개한다.
+* 만약 반이중 허브에서 송신과 수신이 동시에 에러가 발생하는 경우에는?
+  * 이를 에러로 판단한 허브에서 모든 송수신을 멈추기 위해 재밍신호를 흘려 동작을 멈추고 재개한다.
 
 ## 7. UDP 통신
 - TCP와는 다른 비연결형 방식의 프로토콜
-## UDP 통신의 송수신 동작:
+### UDP 통신의 송수신 동작:
 1. 송신: 
-- 애플리케이션은 전송하려는 데이터를 제공한다. 
-- 이 데이터는 UDP에 의해 데이터그램으로 패키징된다.
-- 각 데이터그램에는 소스 포트, 대상 포트, 길이, 체크섬 등의 정보가 포함된 UDP 헤더를 추가한다.
-- UDP 데이터그램은 IP 계층으로 전달되어 패킷화되고 네트워크를 통해 목적지로 전송한다.
+  - 애플리케이션은 전송하려는 데이터를 제공한다. 
+  - 이 데이터는 UDP에 의해 데이터그램으로 패키징된다.
+  - 각 데이터그램에는 소스 포트, 대상 포트, 길이, 체크섬 등의 정보가 포함된 UDP 헤더를 추가한다.
+  - UDP 데이터그램은 IP 계층으로 전달되어 패킷화되고 네트워크를 통해 목적지로 전송한다.
 
 2. 수신:
-- IP 계층에서 데이터그램이 추출하고,
-- UDP 헤더를 확인하여 해당 애플리케이션에 데이터를 전달한다.
+  - IP 계층에서 데이터그램이 추출하고,
+  - UDP 헤더를 확인하여 해당 애플리케이션에 데이터를 전달한다.
 
 ### TCP와 UDP 차이점 분석
 * TCP: 
-- 연결 지향적인 프로토콜. 데이터 전송을 시작하기 전에 송신자와 수신자 사이에 연결을 설정한다.
-- 데이터가 순서대로, 에러 없이 목적지에 도달함을 보장하는 프로토콜. 누락이나 오류 복구 기능에 초점되어있다.
-- 연결 설정, 데이터 전송 보증, 흐름 제어, 혼잡 제어 등의 기능 때문에 오버헤드가 크고 느리다..
-- 헤더의 크기 20바이트 이상으로 되어 있다.
-- 데이터의 무결성과 순서가 중요한 웹 브라우징, 파일 전송, 이메일 등의 애플리케이션에서 주로 사용된다.
+  - 연결 지향적인 프로토콜. 데이터 전송을 시작하기 전에 송신자와 수신자 사이에 연결을 설정한다.
+  - 데이터가 순서대로, 에러 없이 목적지에 도달함을 보장하는 프로토콜. 누락이나 오류 복구 기능에 초점되어있다.
+  - 연결 설정, 데이터 전송 보증, 흐름 제어, 혼잡 제어 등의 기능 때문에 오버헤드가 크고 느리다.
+  - 헤더의 크기 20바이트 이상으로 되어 있다.
+  - 데이터의 무결성과 순서가 중요한 웹 브라우징, 파일 전송, 이메일 등의 애플리케이션에서 주로 사용된다.
 
 * UDP: 
-- 연결이 설정되지 않은 상태에서 데이터를 전송을 시도하는 프로토콜. "비연결형"이라고 한다.
-- 데이터 전송을 보장하지 않는다. 데이터그램은 중복되거나 순서대로 도착하지 않을 수 있으며, 누락될 수도 있는 가능성이 있다.
-- 상기한 기능들이 없기 때문에 오버헤드가 적고 빠른 전송 속도를 제공한다.
-- 헤더 크기가 8바이트로 작은 편에 속한다..
-- 낮은 지연 시간이 필요하고 일부 데이터그램의 손실이 허용되는 스트리밍, 온라인 게임, VoIP 등의 애플리케이션에서 주로 사용한다..
+  - 연결이 설정되지 않은 상태에서 데이터를 전송을 시도하는 프로토콜. "비연결형"이라고 한다.
+  - 데이터 전송을 보장하지 않는다. 데이터그램은 중복되거나 순서대로 도착하지 않을 수 있으며, 누락될 수도 있는 가능성이 있다.
+  - 상기한 기능들이 없기 때문에 오버헤드가 적고 빠른 전송 속도를 제공한다.
+  - 헤더 크기가 8바이트로 작은 편에 속한다.
+  - 낮은 지연 시간이 필요하고 일부 데이터그램의 손실이 허용되는 스트리밍, 온라인 게임, VoIP 등의 애플리케이션에서 주로 사용한다.
