--- a/songsunkook/4주차.md
+++ b/songsunkook/4주차.md
@@ -282,3 +282,7 @@ UDP를 왜 쓰는지는 알겠다. 하지만 패킷 하나에 담길 수 있을 
 음성이나 동영상은 도중에 패킷 송수신이 지연되면 그대로 끊김 현상이 나타나게 된다. 스트리밍 서비스의 버퍼링과 같은 것이라고 생각하면 쉽다. 그런데 TCP에서는 패킷 하나하나 절대 놓치지 않으려고 여러 부가적인 절차를 거치게 되는데, 이때문에 버퍼링이 더 오래 발생하게 된다. 하지만 사람은 실제로 그렇게 크게 예민하지 않아서 음성이 잠깐 치직거린다거나 동영상에서 화질이 좀 안좋아져도 크게 개의치 않는다. 따라서 이 점을 이용하여 몇몇 패킷이 손실되더라도 빠르게 데이터를 송신할 수 있도록 UDP를 사용한다. 
   
 위와 같이 다시 보낼 필요가 없거나 다시 보내도 쓸모가 없다면 UDP로 데이터를 송신하는 것이 더 효율적이다.
+
+## 참고 자료
+성공과 실패를 결정하는 1%의 네트워크 원리 - Tsutomu Tone, 출판사: 성안당
+  - Chapter 2-5 ~ 2-6
