이미지 추가

--- a/weweweme/4주차.md
+++ b/weweweme/4주차.md
@@ -13,6 +13,7 @@
 - 패킷과 이더넷 프레임 : IP 패킷은 더 나아가 **이더넷 프레임** 으로 캡슐화되어 물리적 네트워크를 통해 전송된다. 
     - 여기서 이더넷 프레임은 패킷의 **운송 수단** 같은 역할을 한다.
 
+![OSI 모델](https://camo.githubusercontent.com/7e756d601fb27070de42742ceeb8f68d15d5f3c3d3e5219f13aa94cef389f679/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f30373465376230362d633630342d343565642d383034352d3166353036623836633465302f696d6167652e706e67)
 
 ### 2.5.2. 패킷 송・수신의 개요
 
