1차 내용 요약

--- a/daepan/6주차.md
+++ b/daepan/6주차.md
@@ -1,1 +1,75 @@
-# 6주차
+## 3.3 라우터의 패킷 중계 동작
+
+### 3.3.1 라우터의 기본
+라우터는 네트워크에서 패킷을 수신하고 목적지 주소를 바탕으로 최적의 경로를 찾아 패킷을 중계하는 장비입니다. 주로 IP 주소를 기반으로 작동합니다.
+
+- **예제**: A라는 컴퓨터가 B라는 컴퓨터에 데이터를 전송하고자 할 때, 라우터는 A의 패킷을 수신하고 B로의 최적 경로를 찾아 패킷을 전달합니다.
+
+### 3.3.2 경로표에 등록된 정보
+라우터는 경로표(라우팅 테이블)를 통해 다양한 경로 정보를 저장하고 관리합니다. 이 테이블에는 목적지 주소, 넥스트 홉 주소, 출력 인터페이스 등의 정보가 포함됩니다.
+
+- **예제**: 경로표에는 "192.168.1.0/24 네트워크로 가는 가장 빠른 경로는 eth0 인터페이스를 통해 192.168.1.1이다"라는 정보가 저장될 수 있습니다.
+
+### 3.3.3 라우터의 패킷 수신동작
+라우터가 패킷을 수신하면, 먼저 패킷의 헤더를 확인하여 목적지 주소를 파악합니다.
+
+- **예제**: A가 192.168.1.10 주소로 패킷을 전송하면, 라우터는 이 패킷을 수신하여 192.168.1.10으로 가는 경로를 찾습니다.
+
+### 3.3.4 경로표를 검색하여 출력포트를 발견한다.
+라우터는 경로표를 검색하여 패킷의 목적지 주소에 대한 출력 포트를 찾습니다.
+
+- **예제**: 라우터의 경로표에 따르면 192.168.1.10 주소로 가는 패킷은 eth1 포트를 통해 전달됩니다.
+
+### 3.3.5 해당하는 경로가 없는 경우에 선택하는 기본 경로
+경로표에 해당 주소가 없을 경우, 라우터는 기본 경로(디폴트 라우트)를 사용하여 패킷을 전송합니다.
+
+- **예제**: 라우터는 10.10.10.10 주소로 가는 경로 정보가 없다면, 설정된 기본 경로를 통해 패킷을 전달합니다.
+
+### 3.3.6 패킷은 유효기한이 있다.
+각 패킷에는 Time-to-Live (TTL) 값이 있어, 이 값이 0이 되면 패킷은 폐기됩니다. 이는 무한 루프를 방지합니다.
+
+- **예제**: 패킷의 TTL이 처음에 64로 설정되었을 경우, 각 라우터를 거칠 때마다 1씩 감소하며, 0이 되면 해당 패킷은 폐기됩니다.
+
+### 3.3.7 큰 패킷은 조각 나누기 기능으로 분할한다.
+MTU(Maximum Transmission Unit)보다 큰 패킷은 라우터에 의해 조각내어 전송됩니다.
+
+- **예제**: 1500바이트의 MTU 값을 가진 네트워크에서 2000바이트 패킷을 전송하려 할 경우, 라우터는 이를 두 조각으로 나누어 전송합니다.
+
+### 3.3.8 라우터의
+
+ 손신동작은 컴퓨터와 같다.
+라우터도 하드웨어적인 오류나 내부 문제로 인해 패킷을 잃어버릴 수 있습니다.
+
+- **예제**: 라우터의 메모리가 가득 차거나, 하드웨어 오류로 인해 일부 패킷이 손실될 수 있습니다.
+
+### 3.3.9 라우터와 스위칭 허브의 관계
+라우터는 네트워크 계층에서 작동하는 반면, 스위칭 허브는 데이터 링크 계층에서 작동합니다. 라우터는 IP 주소를, 스위칭 허브는 MAC 주소를 기반으로 통신합니다.
+
+- **예제**: A와 B가 같은 로컬 네트워크에 있을 때, 스위칭 허브는 A와 B의 MAC 주소를 사용하여 데이터를 전송합니다. 그러나 다른 네트워크에 있을 때는 라우터를 통해 IP 주소를 기반으로 데이터가 전송됩니다.
+
+## 3.4 라우터의 부가 기능
+
+### 3.4.1 주소 변환으로 IP 주소를 효율적으로 이용한다.
+Network Address Translation (NAT) 기능을 통해 라우터는 내부 네트워크의 주소를 하나의 공용 주소로 변환하여 외부와 통신합니다.
+
+- **예제**: 회사 내부 네트워크에서 여러 장치가 하나의 공용 IP 주소를 사용하여 인터넷에 액세스할 때, NAT를 통해 내부 장치의 IP 주소는 공용 IP 주소로 변환되어 전송됩니다.
+
+### 3.4.2 주소 변환의 기본 동작
+NAT는 내부 IP 주소와 포트 번호를 공용 IP 주소와 포트 번호로 변환하는 과정을 거칩니다.
+
+- **예제**: 내부 네트워크의 장치가 192.168.1.10:3000에서 외부 서버에 액세스하려 할 때, NAT를 통해 이 주소는 203.0.113.5:4000과 같은 공용 주소로 변환될 수 있습니다.
+
+### 3.4.3 포트 번호를 바꿔쓰는 이유
+포트 번호 변경은 여러 내부 장치가 같은 공용 IP 주소를 사용하여 외부와 통신할 때 구분하기 위함입니다.
+
+- **예제**: 두 대의 컴퓨터가 같은 공용 IP를 사용하여 외부 웹사이트에 액세스하려 할 때, 라우터는 각 요청에 대해 다른 포트 번호를 할당하여 요청을 구분합니다.
+
+### 3.4.4 인터넷에서 회사로 액세스한다.
+VPN이나 포트 포워딩을 사용하여 외부에서 내부 네트워크에 액세스할 수 있습니다.
+
+- **예제**: 원격 지사에서 본사의 내부 네트워크에 접근하려 할 때, VPN을 통해 안전하게 내부 네트워크에 접속할 수 있습니다.
+
+### 3.4.5 라우터의 패킷 필터링 기능
+라우터는 보안 정책에 따라 특정 패킷을 차단하거나 허용하는 패킷 필터링 기능을 제공합니다.
+
+- **예제**: 회사 라우터는 보안 정책에 따라 포트 22(SSH)로의 모든 외부 접근을 차단할 수 있습니다.
