--- a/daepan/6주차.md
+++ b/daepan/6주차.md
@@ -3,12 +3,45 @@
 ### 3.3.1 라우터의 기본
 라우터는 네트워크에서 패킷을 수신하고 목적지 주소를 바탕으로 최적의 경로를 찾아 패킷을 중계하는 장비입니다. 주로 IP 주소를 기반으로 작동합니다.
 
-- **예제**: A라는 컴퓨터가 B라는 컴퓨터에 데이터를 전송하고자 할 때, 라우터는 A의 패킷을 수신하고 B로의 최적 경로를 찾아 패킷을 전달합니다.
+라우터의 내부구조는 중계와 포트 부분으로 나뉩니다.
+- **라우터의 내부 구조**
+라우터의 중계 기능은 크게 라우팅 (중계) 부분과 포트 부분으로 나뉘어져 있습니다. 이 두 부분은 라우터의 핵심 구성 요소이며, 패킷의 전달과 관련된 다양한 작업을 처리합니다.
+
+1. 라우팅 (중계) 부분:
+
+* 라우팅 알고리즘을 실행하고 라우팅 테이블을 관리합니다.
+* 패킷의 목적지 IP 주소를 검사하여 해당 패킷을 어느 포트로 전달해야 할지 결정합니다.
+* 이 부분은 라우터의 두뇌 역할을 합니다. 모든 라우팅 결정과 관련된 연산이 여기에서 이루어집니다.
+
+2. 포트 (인터페이스) 부분:
+
+* 패킷을 물리적으로 수신하거나 전송하는 역할을 합니다.
+* 각 포트는 특정 네트워크 링크 (예: 이더넷, Wi-Fi, 광섬유)와 연결되어 있으며, 해당 링크의 통신 표준 및 속도에 따라 작동합니다.
+* 포트는 라우팅 부분에서 결정된 경로를 기반으로 패킷을 실제 네트워크로 전송하는 물리적인 장치입니다.
+
+- **예제**: A라는 컴퓨터가 B라는 컴퓨터에 데이터를 전송하고자 할 때, 라우터는 포트 부분에서 A의 패킷을 물리적으로 수신합니다. 이후, 라우팅 부분은 패킷의 목적지 주소를 검사하고, 라우팅 테이블을 참조하여 B로의 최적 경로를 결정합니다. 결정된 경로에 따라 포트 부분은 패킷을 해당 출력 포트로 전송하게 됩니다.
 
 ### 3.3.2 경로표에 등록된 정보
 라우터는 경로표(라우팅 테이블)를 통해 다양한 경로 정보를 저장하고 관리합니다. 이 테이블에는 목적지 주소, 넥스트 홉 주소, 출력 인터페이스 등의 정보가 포함됩니다.
 
+* 스위칭 허브와의 비교
+- 라우터와 스위칭 허브는 둘 다 네트워크 장비이지만, 그들의 작동 원리와 관리하는 정보가 다릅니다:
+
+1. 스위칭 허브 (Switch)
+
+* 주로 MAC 주소를 기반으로 작동합니다.
+* MAC 주소 테이블을 가지고 있어, 특정 MAC 주소가 어느 포트에 연결되어 있는지 추적합니다.
+
+- **예제**: 스위칭 허브의 MAC 주소 테이블에는 "AA:BB:CC:DD:EE:FF의 MAC 주소는 1번 포트에 연결되어 있다"라는 정보가 있을 수 있습니다.
+
+2. 라우터 (Router)
+
+* 주로 IP 주소를 기반으로 작동합니다.
+* 라우팅 테이블을 가지고 있어, 특정 IP 주소 또는 IP 주소 범위가 어떤 경로로 전달되어야 하는지 결정합니다.
+
 - **예제**: 경로표에는 "192.168.1.0/24 네트워크로 가는 가장 빠른 경로는 eth0 인터페이스를 통해 192.168.1.1이다"라는 정보가 저장될 수 있습니다.
+
+여기서 라우터는 호스트 번호를 무시하고 네트워크 번호 부분만 조사한다
 
 ### 3.3.3 라우터의 패킷 수신동작
 라우터가 패킷을 수신하면, 먼저 패킷의 헤더를 확인하여 목적지 주소를 파악합니다.
