--- a/6주차/6주차.md
+++ b/6주차/6주차.md
@@ -235,6 +235,7 @@ Fortinet방확벽에서의 SNAT,DNAT
 
 [컴퓨터 네트워킹 하향식 접근](https://product.kyobobook.co.kr/detail/S000061694627)
 
+강승찬p 인터네트워킹
 [https://yoo11052.tistory.com/40](https://yoo11052.tistory.com/40)
 
 [https://docs.aws.amazon.com/ko_kr/vpc/latest/userguide/VPC_Route_Tables.html](https://docs.aws.amazon.com/ko_kr/vpc/latest/userguide/VPC_Route_Tables.html)
