--- a/songsunkook/6주차.md
+++ b/songsunkook/6주차.md
@@ -30,14 +30,14 @@
 ### 주소 집약
 수신처에는 서브넷을 기록한다고 했는데, 모든 서브넷을 전부 라우팅 테이블에 기록하게 되면 테이블이 비효율적으로 구성되게 된다. 예를 들어 IP 주소 및 넷마스크가 각각 `1.1.1.0/24`, `1.1.2.0/24`, `1.1.3.0/24`이고 셋의 게이트웨이가 동일하다고 가정해보자. 이를 모두 라우팅 테이블에 기록하게 되면 목적지(게이트웨이)가 같음에도 불구하고 3행이나 차지하게 된다. 이런 경우에는 세 서브넷의 공통부분을 따서 `1.1.0.0`으로 수신처 IP를 기록하고 넷마스크를 16(네트워크 부분 비트 수가 줄어들었기 때문)으로 기록한다. 이렇게 되면 중계 동작은 정상적으로 수행 가능하면서도 라우팅 테이블에 정보를 효과적으로 기록할 수 있다.
 
-### 라우팅 테이블에 수신처에 PC를 등록하는 방법
+### 라우팅 테이블의 수신처에 PC를 등록하는 방법
 넷마스크를 이용하면 라우팅 테이블의 수신처 IP 주소에 서브넷뿐만 아니라 특정 PC도 기록할 수 있다. 넷마스크를 `255.255.255.255`로 잡게 되면 수신처 IP 주소의 모든 비트를 비교 대상에 포함시키게 되기 때문에 특정 PC 주소를 가리킬 수도 있게 된다.
 
 ### 게이트웨이(Gateway)와 인터페이스(Interface)
 인터페이스는 라우터 내에 있는 포트와 같은 의미이고, 게이트웨이는 중계 대상 라우터의 IP 주소이다. 수신처와 넷마스크로 중계 대상에 해당하는 행을 찾아내면 이에 대응하는 "인터페이스"의 "게이트웨이" IP 주소에 해당하는 라우터에 패킷을 송신한다.
 
 ### 메트릭(Metric)
-메트릭은 목적지를 향한 거리를 나타낸다. 작을수록 가깝고, 멀수록 멀다. 따라서 동일한 중계 목적지 후보가 여럿이라면 이 중 메트릭이 작은 쪽을 선택한다.
+메트릭은 목적지를 향한 거리를 나타낸다. 작을수록 가깝고, 클수록 멀다. 따라서 동일한 중계 목적지 후보가 여럿이라면 이 중 메트릭이 작은 쪽을 선택한다.
 
 ### 라우팅 테이블 갱신
 패킷을 중계할 때마다 MAC 주소표를 갱신하는 스위칭 허브와 달리 라우터에서는 패킷을 중계할 때 라우팅 테이블을 자동으로 갱신해주지 않는다. 라우팅 테이블은 사람이 수동으로 갱신해주거나 라우팅 프로토콜을 통해 라우터들 간에 서로 경로 정보를 교환하는 식으로 테이블을 갱신한다. 여기서 라우팅 프로토콜은 RIP, OSPF, BGP 등 여러 가지가 존재한다.
