--- a/daheeParkk/1주차.md
+++ b/daheeParkk/1주차.md
@@ -3,7 +3,7 @@
 > **URL (Uniform Resource Locator)**
 > - 브라우저는 웹서버에 액세스하는 클라이언트 기능, 파일을 다운로드/업로드하는 FTP의 클라이언트 기능, 메일의 클라이언트 기능을 가지고 있다.
 > - URL은 클라이언트의 기능 중 어느 것으로 데이터에 액세스하면 좋을지 판단하기 위해
-    http:, ftp:, file:, mailto: 등 여러 종류가 있다. 각종 URL의 형식이 다르다.
+    http:, ftp:, file:, mailto: 등 여러 종류가 있고, 각종 URL의 형식이 다르다.
 > - FTP (File Transfer Protocol)
 >    - 파일을 다운로드/업로드할 때 사용하는 프로토콜이다.
 >    - FTP 프로토콜을 이용하여  파일 전송을 하는 프로그램도 FTP이다.
@@ -72,7 +72,7 @@
 >    - 동일한 물리적 공간에 존재하는 장치들의 네트워크를 의미한다.
 >    - 하나의 라우터에 장치들이 연결되어 형성된다.
 > - MAC 주소
->    - Mac Adress, 하드웨어 주소, 물리적 주소, 이더넷 주소(Ethernet Adress)라고 불린다.
+>    - Mac Address, 하드웨어 주소, 물리적 주소, 이더넷 주소(Ethernet Address)라고 불린다.
 >    - 컴퓨터간 데이터를 전송하기 위해 있는 컴퓨터의 물리적 주소이다.
 >    - 컴퓨터와 라우터, 스위치 등 통신 장비 모두에게 붙어있다.
 >    - MAC 주소와 IP 주소 둘 다 필요한 이유
