피드백 수정, 내용 추가

--- a/weweweme/6주차.md
+++ b/weweweme/6주차.md
@@ -3,27 +3,61 @@
 ### 3.3.1. 라우터의 기본
 
 #### 라우터의 내부 구조
+
+![라우터의 내부 구조](https://camo.githubusercontent.com/04de8a3768dc825e2e3262a6aa2e7640ec5246fcae4cc6860cbbf89c026a0ffe/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f34366430373935642d333565352d343030642d393063362d6330336136346563313433622f696d6167652e706e67)
+
 - 라우터의 구조는 중계 부분과 포트 부분으로 구성된다.
+    - 중계 부분에 해당하는 부품은 라우팅 프로세서와 스위칭 패브릭이 있다.
+    - 포트 부분에 해당하는 부품은 입력 포트, 출력 포트가 있다.
 - 중계 부분은 패킷의 목적지 IP 주소를 참조하여 라우팅 테이블을 검색하고 패킷을 올바른 포트로 전달한다.
 - 포트 부분은 특정 통신 기술의 규칙에 따라 패킷을 수신하거나 전송한다.
-    - 이더넷 포트: 전통적인 유선 연결에 사용되며, MAC 주소를 기반으로 데이터 프레임을 처리한다.
-    - [무선 LAN](http://www.ktword.co.kr/test/view/view.php?nav=2&no=2157&sh=%EB%AC%B4%EC%84%A0+LAN) 포트 : 무선 주파수를 사용하여 데이터를 전송하며, Wi-Fi 표준에 따라 동작한다.
-    - [ADSL](http://www.ktword.co.kr/test/view/view.php?nav=2&no=242&sh=adsl) 포트 : 전화선을 사용한 디지털 데이터 전송을 위한 포트로, ADSL 모뎀과 함께 사용되며, 데이터와 음성 신호를 분리한다.
-    - [FTTH](http://www.ktword.co.kr/test/view/view.php?nav=2&no=598&sh=ftth) 포트 : 광섬유를 통한 고속 인터넷 접속을 지원하는 포트로, 광섬유 신호를 전기 신호로 변환하여 라우터의 중계 부분에 전달한다.
 - 결정된 포트로 패킷을 전송하며, 해당 포트는 포트 부분의 규칙에 따라 패킷을 송신한다.
 
-#### 라우터와 스위칭 허브의 차이점
-- 동작 위치
-    - 라우터는 IP 주소를 기반으로 하는 네트워크 계층에서 동작한다.
-    - 스위칭 허브는 MAC 주소를 기반으로 하는 데이터 링크 계층에서 동작한다.
-- 동작 방식
-    - 스위칭 허브는 들어온 프레임을 단순히 전송만 한다.
-    - 라우터의 포트는 패킷의 목적지나 출발지로서의 기능을 수행한다.
+#### 입력 포트(Input ports)
 
+![입력 포트](https://camo.githubusercontent.com/82e85e72e75a7e2e08d48060dedd42db42a4b9e0c4d908b6d15d5220266ea94c/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f31326366633762662d623238342d346361332d393165342d3163363835633637623832342f696d6167652e706e67)
 
-### 3.3.2. 경로표에 등록된 정보
+- 입력 포트를 통해 신호가 수신된다.
+- 이 곳에서 PHY 회로를 통해 디지털 데이터로 변환되고, MAC 회로를 통해 FCS 검사와 MAC 헤더 일치 검사를 진행한 후 버퍼에 저장한다.
+- 이후 [포워딩 테이블](http://www.ktword.co.kr/test/view/view.php?nav=2&no=1327&sh=%ED%8F%AC%EC%9B%8C%EB%94%A9+%ED%85%8C%EC%9D%B4%EB%B8%94)을 참고하여 출력 포트를 결정한다.
+    - 이때 포워딩 속도가 느리다면 큐에서 대기하는 버퍼링 현상이 일어난다.
+
+#### 출력 포트(Output ports)
+
+![출력 포트](https://camo.githubusercontent.com/00563614b9aa3d5394ec7c5a71c610193efc519848c447f7910e9e7971ffc9aa/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f30376534333636662d373163372d343939642d616463362d3864626136306461346165332f696d6167652e706e67)
+
+- 출력 포트가 결정이 되었다면 출력 포트에 의해 비트 데이터가 신호로 바뀌어 다음 라우터(혹은 컴퓨터)를 향해 송신한다.
+- 입력 포트와는 거꾸로 동작한다.
+- 여러가지 통신 회선에 따라 각각의 규칙이 적용되며, ARP를 통해 MAC 주소를 획득하여 MAC 헤더를 추가한 뒤, 신호로 바꾸어 내보낸다.
+
+#### 라우팅 프로세서(Routiong Processor)
+- 출력 포트를 결정하는 작업을 수행한다.
+- 라우팅 테이블을 관리하고 갱신하는 라우팅 프로토콜을 실행한다.
+- 라우팅 방식은 갱신 방법에 따라 두 가지가 있다.
+    - 정적 라우팅 : 관리자가 수동으로 구성하는 방법이다.
+    - 동적 라우팅 : 다른 라우터의 정보를 기반하여 자동으로 구성한다.
+        - 라우팅 프로토콜은 동적 라우팅에 속하는 방식들을 일컫는다.
+- 공유하는 정보에 따라 거리 벡터 라우팅 프로토콜 방식과 링크 상태 라우팅 프로토콜로 나뉜다.
+
+![거리 벡터 라우팅 프로토콜](https://camo.githubusercontent.com/3bd3056962cf9e79c85dce5c558a84d24504fecbedfa1e8ac96422f41e90963d/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f36663836343634372d346635642d343137372d626564322d3437326630383763386233382f696d6167652e706e67)
+![링크 상태 라우팅 프로토콜](https://camo.githubusercontent.com/919e0ab7f5e6ff15e35e975952172cc067cee5fe78d24eece5e4b98ea5b6f6db/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f34393364383862662d383236312d343461652d613164322d6432363239363764306539642f696d6167652e706e67)
+
+| 구분| 거리 벡터 방식 | 링크 상태 방식 |
+|------------------------|---------------------------------------------------------------------|---------------------------------------------------------------------|
+| 설명| 이웃 노드들과 정보를 공유하여, 이를 바탕으로 목적지까지의 거리와 벡터를 결정하는 방식 | 노드가 모든 노드에 상태를 전달한 후, 이를 바탕으로 최단 경로를 구성하는 방식 |
+| 사용 알고리즘 | 분산 벨만포드 알고리즘 | 다익스트라 알고리즘 |
+| 활용 예 | 작은 규모 혹은 가정에서는  [RIP](http://www.ktword.co.kr/test/view/view.php?nav=2&no=178&sh=RIP) 방식 사용 | 대규모 환경에서는  [OSPF](http://www.ktword.co.kr/test/view/view.php?nav=2&no=437&sh=OSPF) 방식 사용 |
 
 #### 라우팅 테이블의 개념
+
+|Destination|Netmask|Gateway|Interface|Metric|
+|----------|----------|----------|----------|----------|
+|10.10.1.0|255.255.255.0|-|e2|1|
+|10.10.1.101|255.255.255.255|-|e2|1|
+|192.168.1.0|255.255.255.0|-|e3|1|
+|192.168.1.10|255.255.255.255|-|e3|1|
+|0.0.0.0|0.0.0.0|192.0.2.1|e1|1|
+
 - 스위칭 허브와 라우터 모두 중계 대상을 조사하기 위해 테이블을 사용한다.
 - 그러나 두 장치는 다른 주소 체계를 취급하므로 해당 테이블의 내용도 다르다.
 - 스위칭 허브의 테이블은 MAC 주소 테이블이라 부른다.
@@ -31,7 +65,36 @@
     - 맨 왼쪽의 수신처 항목에는 목적지 정보, 즉 서브넷 마스크가 포함된다.
     - 라우터는 이 항목에 등록된 IP 주소와 수신한 패킷의 목적지 IP 주소를 비교하며, 주로 네트워크 번호만을 조사한다.
 
-![주소 집약](https://t1.daumcdn.net/cfile/tistory/2133954254FEC51819?original)
+#### 스위칭 패브릭(Switching Fabric)
+
+![스위칭 패브릭 종류](https://camo.githubusercontent.com/6d19df59a99e983efb1b6d421123057467906ae7e3f6a487708065a481fc82f8/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f61383761363330372d373063302d343833312d383066652d3838336661623834656230662f696d6167652e706e67)
+
+- 입력 포트로 들어온 패킷은 라우터 프로세서에 의해 출력 포트로 매핑된다.
+
+- Shared memory switching fabric
+    - 메모리에 노드들이 저장되어있고, CPU 연산(제어)을 통해 출력 포트를 결정한다. 
+    - 공유 메모리를 사용하기 때문에 병목 현상이 발생할 수 있다.
+- Bus memory fabric
+    - 별도의 연산 없이 버스 매핑으로 출력 포트를 결정한다. 
+    - 단일 버스를 모두 사용함으로써 동시에 매핑할 수 없고 속도가 제한된다.
+- Crossbar switching fabric
+    - 각각 N개의 입출력 포트가 격자(바둑판)를 이룬다. 
+    - 교차 지점마다 스위치가 존재해야 하여 비용이 크지만, 여러 입력을 병렬로 처리할 수 있다. 
+    - 대역폭 한계를 극복했다고도 한다.
+
+
+#### 라우터와 스위칭 허브의 차이점
+- 동작 위치
+    - 라우터는 IP 주소를 기반으로 하는 L3에서 동작한다.
+    - 스위칭 허브는 MAC 주소를 기반으로 하는 L2에서 동작한다.
+- 동작 방식
+    - 스위칭 허브는 들어온 프레임을 단순히 전송만 한다.
+    - 라우터의 포트는 패킷의 목적지나 출발지로서의 기능을 수행한다.
+
+
+### 3.3.2. 경로표에 등록된 정보
+
+![주소 집약](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbfHPnF%2FbtqDkzYuSeb%2FK8uKGd2wJmKFeQIm9Nsqs0%2Fimg.png)
 
 #### 서브넷 주소와 호스트 주소
 - 실제 서브넷에 할당된 서브넷 마스크와 경로표에 등록된 서브넷 마스크 값은 다를 수 있다.
@@ -47,13 +110,6 @@
 - 낮은 메트릭 값은 더 가까운 또는 비용이 적은 경로를 나타낸다.
 - 라우팅 결정을 할 때 어떤 경로를 선택할 것인지 결정하는 데 사용된다.
 - 라우팅 테이블에 나타나며, 라우팅 프로토콜마다 기준이 다르다.
-
-#### 경로 등록 방법
-- 라우터와 스위칭 허브의 등록 원리는 다르다.
-    - 스위칭 허브는 패킷 중계 동작 중 MAC 주소 테이블에 자동으로 등록한다.
-    - 라우터에서의 경로 정보 등록이나 갱신은 패킷 중계 동작과 분리되어 있으며 두 가지 방법이 있다.
-        - 관리자에 의해 수동으로 등록 또는 갱신된다.
-        - 라우팅 프로토콜을 사용하여 라우터 간에 정보를 교환하고 자동으로 경로표를 갱신한다.
 
 
 ### 3.3.3. 라우터의 패킷 수신 동작
@@ -150,38 +206,35 @@
 ## 3.4. 라우터의 부가 기능
 
 ### 3.4.1. 주소 변환으로 IP 주소를 효율적으로 이용한다
-- 현재 라우터는 기본 동작 외에도 몇 가지 부가 기능을 가지고 있다.
-- 그 중 주소 변환과 패킷 필터링은 특히 중요하다.
+- 라우터는 주소 변환과 패킷 필터링 같은 부가 기능을 가지고 있다.
+- 주소 변환은 인터넷 사용자 급증으로 인한 IP 주소 부족 문제를 해결하기 위해 도입된 기술이다.
 
 #### 주소 변환
-- 주소는 각 기기를 식별하기 위한 것으로, 다른 것과 중복되지 않는 고유한 주소를 할당하는 것이 기본 원칙이다.
-- 1990년대 들어 인터넷이 일반에게 공개된 이후, 사용자 수가 급증하면서 고유한 주소의 부족 문제가 부각되었다.
-- 패킷을 전달하는 원리의 기반은 고유한 주소 할당에 기반하기 때문에, 장래에 주소가 고갈될 우려가 있었다.
-- 이 문제를 해결하기 위해, 주소를 공유하는 새로운 방식을 도입하게 되었다.
-- 따라서 주소를 private address와 public address로 구분하기 시작했다.
+- 주소는 각 기기를 식별하기 위한 것으로, 중복되지 않는 고유한 주소 할당이 기본 원칙이다.
+- 주소 부족 문제를 해결하기 위해 주소를 private address와 public address로 구분하기 시작했다.
 
 #### 프라이빗 주소(private address)
-- private 주소는 특별한 구조를 가진 것이 아닌, 원래의 public 주소에 포함되어 있던 주소 중에서 특정 범위를 정하여 내부적으로만 사용하기로 한 것이다.
-- 이 주소는 중앙에서 일원화하여 관리할 필요가 없으므로 누구나 자유롭게 사용할 수 있다.
-- 사내 네트워크의 기기들은 private 주소를 할당받아 사용한다. 이 기기들이 인터넷과 통신할 때, 내부의 private 주소는 공용 IP 주소로 변환되어야 한다.
+- 사내 네트워크의 기기들은 private 주소를 사용한다.
+- 이 기기들이 인터넷과 통신할 때, 내부의 private 주소는 공용 IP 주소로 변환된다.
 - 이 주소 변환 작업을 수행하는 기술을 NAT(Network Address Translation) 또는 간단히 **주소 변환** 이라고 한다.
 
 
 ### 3.4.2. 주소 변환의 기본 동작
 - 주소 변환, 일명 NAT(Network Address Translation)의 주요 기능은 패킷 중계 시 IP 헤더에 포함된 IP 주소와 포트 번호를 변경하는 것이다.
-
-#### 초기 접속과 주소 변경
-- 어떤 기기가 인터넷에 접속하려 할 때, 그 기기의 private IP 주소는 NAT 장치에 의해 public IP 주소로 변환된다.
-- 이 변환 과정에서 사용되는 public IP 주소는 NAT 장치에 할당된 외부 IP 주소이다. 또한, 통신에 사용되는 포트 번호도 변경될 수 있다.
+- 기기가 인터넷에 접속하려 할 때, 그 기기의 private IP 주소는 NAT에 의해 public IP 주소로 변환된다.
 
 #### NAT 테이블과 주소 기록
-- 기기의 원래 주소(private 주소와 포트 번호)와 바뀐 주소(public 주소와 포트 번호)는 NAT 장치의 테이블에 저장된다.
-- 기기가 인터넷을 통해 서버에 데이터를 보내면, 서버는 바뀐 public 주소로 응답을 보낸다.
-- 서버로부터 받은 응답은 NAT 장치에서 원래의 private 주소로 다시 바꾸어 기기에 전송된다.
+- NAT 테이블에는 private 주소와 public 주소의 매칭 정보가 저장된다.
+- 패킷을 주고받을 때는 NAT 테이블을 참조하여 해당 주소의 대응 관계를 확인하고 패킷을 올바른 대상에게 중계한다.
 
-#### 테이블 참조와 패킷 중계
-- 패킷을 주고받을 때는 NAT 테이블을 참조하여 해당 주소의 대응 관계를 확인하고, 패킷을 올바른 대상에게 중계한다.
-- 데이터 송수신이 완료되고 연결이 종료되면, NAT 테이블에서 해당 연결 정보는 삭제된다.
+#### 예시
+
+![NAT의 동작](https://i.imgur.com/m6DRh7d.png)
+
+1. 기기는 private IP 주소와 포트 번호를 source address로 설정하여 패킷을 보낸다.
+2. NAT router는 패킷의 source address를 라우터의 public IP로 변환한다.
+3. public IP로 패킷이 도착한다.
+4. NAT router는 NAT 테이블을 확인하고 destination address를 해당하는 private IP address로 바꾼다.
 
 
 ### 3.4.3. 포트 번호를 바꿔쓰는 이유
