4주차 내용 추가

--- a/weweweme/4주차.md
+++ b/weweweme/4주차.md
@@ -362,7 +362,103 @@
 
 #### 결론
 - 다시 보낼 필요가 없거나 다시 보내도 쓸모가 없다면 단순히 UDP로 데이터를 보내는 쪽이 더 효율적이다.
- 
+
+
+## 2.7. HTTP에 대한 이해
+
+### 2.7.1. HTTP/0.9
+
+```
+GET /index.html
+
+<html> ... </html>
+```
+
+- Get 메서드와 html 데이터만 전송할 수 있다.
+- 별도로 versioning은 되어있지 않았으나 이후 버전들과 구분하기 위해 0.9 버전이라 부른다.
+
+
+### 2.7.2. HTTP/1.0
+
+```
+GET /index.html HTTP/1.0
+User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X x.y; rv:42.0) Gecko/20100101 Firefox/42.0
+
+
+200 OK
+Date: Wed, 13 Sep 2023 19:02:12 GMT
+Server: CERN/3.0 libwww/2.17
+Content-Type: text/html
+<HTML>
+Hello World!
+  <IMG SRC="/word.png">
+</HTML>
+```
+
+- 버전 정보, 헤더 추가, Content-Type 헤더로 인해 html이 아닌 다른 데이터를 전송할 수 있게 되었다.
+
+### 2.7.3. HTTP/1.1
+
+- 모호함을 해소하였고, 다양한 개선사항들이 추가되었다.
+
+#### Persistent Connection
+- 초기 HTML/1.0 은 모든 송수신마다 TCP 연결을 진행해야 했다.
+- 이때 하나의 어플리케이션에서 같은 연결을 여러 번 요청하는 현상(site locality)가 잦았고, 이는 동일한 연결을 불필요하게 여러 번 하게하였다.
+- 이로 인해 다음과 같은 문제들이 생겼다.
+    - 네트워크 혼잡도의 증가
+    - 네트워크 자원 소모 심화
+    - RTT 증가
+- 문제를 해결하기 위해 몇몇 서비스에서는 Connection: keep-alive 라는 헤더를 도입하여 연결을 유지할 수 있도록 하였다.
+    - 이를 **Persistent Connection** 이라고 한다.
+- 하지만 프록시에서 의도치않게 해당 헤더까지 프록시되는 문제가 있었다.
+
+![Persistent Connection 모습](https://camo.githubusercontent.com/01e74276e27874adeaf6bd2fa95017cd7c0f53b9abc95ad2aa9353d7e8beb105/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f61343866393962342d643966612d346463372d613338332d3636343766386336663836322f696d6167652e706e67)
+
+- HTTP/1.1에서는 별도 헤더가 없더라도 기본값으로 Persistent Connection이 되도록 하였고, Connection: close 가 있는 경우에만 연결을 끊도록 하였다.
+
+#### Pipelining
+- 기존 요청의 응답이 없더라도 여러 요청을 보낼 수 있는 Pipelining이 도입되었다.
+
+![Pipelining 모습](https://camo.githubusercontent.com/4356f05e60b85f59aa2862d468ba81d26760864698f0c2a774270df39b800685/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f35383733333565312d663062652d343635302d616533372d6163333966613534643135312f696d6167652e706e67)
+
+- 그 외 다양한 기능에 대한 설명은 [링크](https://developer.mozilla.org/ko/docs/Web/HTTP/Basics_of_HTTP/Evolution_of_HTTP#http1.1_%E2%80%93_%ED%91%9C%EC%A4%80_%ED%94%84%EB%A1%9C%ED%86%A0%EC%BD%9C)로 대체한다.
+
+
+### 2.7.4. HTTP/2.0
+
+#### Binary Framing Layer
+
+![Binary Framing Layer 모습](https://camo.githubusercontent.com/2779cafc8f307185fe862a237150091ab2f92eadc090fd5b215d33f1389a98d8/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f35633062306230632d376366652d346536352d623863322d3564353736623536313536622f696d6167652e706e67)
+
+- HTTP/1.1에서는 텍스트 였던 메시지를 헤더와 데이터로 분리하고 각각을 프레임이라는 단위로 표현하였다. 
+- 또한 이들을 이진 값으로 표현하여 효과적으로 송수신할 수 있게 되었다.
+
+#### Multiplexing
+- HOLB 문제로 인해 HTTP/1.1 에서는 다양한 TCP 연결을 만들어 여러 요청을 병렬적으로 처리하고 있었다.
+- 하지만 이는 Persistent Connection이 효율적으로 사용되지 않는다는 문제가 있었다.
+- 이를 해결하기 위해 2.0 에서는 Multiplexing을 도입하였다.
+
+![Multiplexing 모습](https://camo.githubusercontent.com/a3b2115824e629c5129993ea28e05726362d9b3df96eaaad641e48aee458a80c/68747470733a2f2f76656c6f672e76656c63646e2e636f6d2f696d616765732f696e766964616d2f706f73742f32373062306361362d313433322d343063312d396263382d6366326462363836343663632f696d6167652e706e67)
+
+- Multiplexing은 하나의 TCP 연결에 여러 스트림을 둔다.
+- 스트림은 프레임을 송수신할 수 있고, 스트림 간에 순서는 존재하지 않는다.
+- 이러한 구조 덕분에 어플리케이션 수준의 HOLB를 해소하였다.
+    - HOLB(Head-of-Line Blocking) : 네트워크에서 특정 패킷의 지연이 뒤따르는 패킷들의 처리도 지연시키는 현상을 의미한다.
+- 우선순위 설정(스트림간 우선순위 설정), 서버 푸시(요청하지 않은 데이터도 서버 판단하에 보냄), 헤더 압축(중복되어 사용되는 헤더는 압축하여 재사용) 등 다양한 기능이 추가되었다.
+
+
+### 2.7.5. HTTP/3.0
+- [QUIC](https://ko.wikipedia.org/wiki/QUIC) 프로토콜 사용 : HTTP/3.0은 QUIC 기반으로 UDP를 사용해 TCP의 단점 극복했다.
+- IP 주소 변경과 연결 유지
+    - 기존의 프로토콜에서는 IP 주소가 변경되면 연결이 끊겨서 재연결이 필요했다.
+    - HTTP/3.0은 'Connection UID'라는 고유한 식별자를 사용하여 클라이언트를 식별한다.
+    - 이로 인해 IP 주소가 변경되더라도 연결을 유지할 수 있다.
+- 멀티플렉싱 사용으로 여러 요청과 응답 동시 처리 가능하며 하나의 스트림 손실되도 다른 스트림에 영향이 없다.
+- 보안과 빠른 통신
+    - TCP 3-way-handshake는 네트워크 연결을 초기화하는 과정이다.
+    - TLS 1.3는 데이터 전송의 보안을 강화하기 위한 프로토콜이다.
+    - HTTP/3.0에서는 이 두 과정을 결합하여 보다 빠르게 연결을 초기화하고 강력한 보안을 제공한다.
+
 
 ---
 
@@ -376,3 +472,4 @@
 - [백오프알고리즘 - AWS](https://docs.aws.amazon.com/ko_kr/freertos/latest/userguide/backoffalgorithm-library.html)
 - [UDP - kt정보통신기술용어해설](http://www.ktword.co.kr/test/view/view.php?nav=2&no=323&sh=UDP+%ED%97%A4%EB%8D%94)
 - [Fire and Forget](https://medium.com/mandiri-engineering/fire-and-forget-e59b745c9f97)
+- [SSL/TLS - kt정보통신기술용어해설](http://www.ktword.co.kr/test/view/view.php?nav=2&no=1957&sh=tls)
