--- a/weweweme/5주차.md
+++ b/weweweme/5주차.md
@@ -6,27 +6,36 @@
 ### 3.1.1. 하나하나의 패킷이 독립된 것으로 동작한다
 - 컴퓨터에서 송신된 패킷은 허브나 라우터 같은 중계 장치를 통해 목적지로 전달된다.
     - 허브는 연결된 모든 포트로 들어온 신호를 브로드캐스트한다. 
-    - 라우터는 패킷의 헤더 정보를 분석하여 적절한 경로로 패킷을 전달한다.
-- 일반적으로 애플리케이션 데이터나 TCP 프로토콜의 제어 정보는 패킷이 어떻게 전달될지에 대한 영향을 미치지 않는다.
-    - 이는 중계 장치들이 대부분 패킷의 헤더 정보만을 사용해 라우팅 결정을 하기 때문이다.
+    - 라우터는 패킷의 IP 헤더 정보를 분석하여 적절한 경로로 패킷을 전달한다.
 - 특별한 설정이나 애플리케이션에서 패킷의 내용을 검사하여 라우팅을 결정하는 경우도 있다.
     - DPI(Deep Packet Inspection) : 일부 고급 라우터나 방화벽 장비에서는 패킷의 내용까지 검사하여 특정 데이터(악성 코드 등)가 포함되어 있는지 판단할 수 있다.
     - Application-Level Gateway : 애플리케이션 레벨에서 패킷을 분석하여 라우팅을 결정하는 경우도 있다.
-    - Load Balancing based on Application Data : 애플리케이션 데이터를 기반으로 로드를 분산하기 위한 목적으로 패킷의 내용을 분석할 수 있다.
+    - Load Balancing based on Application Data : 애플리케이션 데이터를 기반으로 트래픽을 고르게 나누기 위한 목적으로 패킷의 내용을 분석할 수 있다.
     - Custom Routing Protocols : 특수한 목적을 위해 개발된 라우팅 프로토콜에서는 패킷의 데이터 부분을 참조할 수 있다.
 
 
 ### 3.1.2. LAN 케이블은 신호를 약화시키지 않는 것이 핵심이다
 
-![RJ-45 커넥터](https://m.media-amazon.com/images/I/71P9Otxc5fL.jpg)
-![트위스티드 페어 케이블](https://datasave.qsfptek.com/resources/image/2022-09-01477398.jpg)
+<figure>
+  <img src="https://m.media-amazon.com/images/I/71P9Otxc5fL.jpg" alt="RJ-45 커넥터">
+  <figcaption style="font-size:small; text-align:left;">RJ-45 커넥터</figcaption>
+</figure>
+
+<figure>
+  <img src="https://datasave.qsfptek.com/resources/image/2022-09-01477398.jpg" alt="트위스티드 페어 케이블">
+  <figcaption style="font-size:small; text-align:left;">트위스티드 페어 케이블</figcaption>
+</figure>
 
 - LAN 어댑터의 PHY 회로에서 전기 신호로 변환된 패킷은 RJ-45 커넥터를 통해 트위스트 페어 케이블에 들어간다.
     - RJ-45는 "Registered Jack 45"의 약자로, 네트워크 케이블의 끝에 연결되는 표준 형태의 플라스틱 커넥터이다.
     - 트위스트 페어 케이블 디자인은 신호의 잡음과 간섭을 최소화한다.
 - 이더넷의 신호는 플러스와 마이너스의 전압으로 구성되며, LAN 어댑터 회로의 플러스와 마이너스 신호 단자에서 신호가 발생한다.
     - 이더넷의 "신호"는 주로 이더넷 프레임을 전기 신호로 변환한 것을 의미한다.
-- 송출한 신호는 허브나 리피터에 도착하기 전에 약해진다.
+- 송출한 신호는 허브나 리피터에 도착하기 전에 다양한 이유로 약해진다.
+    - 케이블의 저항 : 모든 전기적 케이블은 내부 저항을 가지며, 이로 인해 전기 신호는 손실되게 된다.
+    - [Inductance](http://www.ktword.co.kr/test/view/view.php?m_temp1=712)와 [Capacitive Reactance](http://www.ktword.co.kr/test/view/view.php?nav=2&no=2442&sh=%EC%9A%A9%EB%9F%89%EC%84%B1) 효과 : 케이블의 길이와 물리적 구조에 따라 발생하는 인덕턴스와 용량성 리액턴스는 신호의 약화를 초래한다.
+    - 외부 잡음 : 케이블 주변의 다른 전기 장치나 케이블로부터 오는 간섭이 신호의 질을 저하시킬 수 있다.
+    - 케이블의 재질 및 제조 품질 : 고급 케이블과 저급 케이블의 신호 전송 능력은 다를 수 있으며, 제조 품질에 따라 신호 손실률이 달라질 수 있다.
     - 거리가 길어질수록 신호 약화는 더욱 발생한다.
 - 신호 약화를 보정하기 위해 리피터나 허브를 사용할 수 있다.
 - 신호가 도착하면, 잡음이 없더라도 약간의 변형이 발생한다.
@@ -39,11 +48,9 @@
         - [FEC(Forward Error Correction)](http://www.ktword.co.kr/test/view/view.php?m_temp1=693) 같은 알고리즘이 이에 사용된다.
 
 #### 리피터
-- 리피터는 네트워크 신호를 증폭하여 전송 거리를 연장하는 장치다.
-- 특히 이더넷 네트워크에서 자주 사용되며, LAN 케이블을 통해 전송되는 신호의 약화를 보정한다.
-- 리피터에 도착한 신호는 증폭되어 다른 포트로 재전송된다.
-- MAC 주소를 통해 패킷을 수신해야 하는 기기를 식별하며, 패킷을 모든 포트로 브로드캐스트한다.
-- 이 장치는 데이터의 충돌이나 기타 문제를 해결하지 않으며, 단순히 신호만 증폭한다.
+- 리피터는 전기적인 신호를 증폭하거나 재생성하여 케이블을 통한 신호의 전송 거리를 연장하는 장치이다.
+- L1에서 동작하는 장치이기 때문에 MAC 주소나 IP 주소와 같은 상위 계층의 정보를 인식하거나 처리하지 않는다.
+- 이 장치는 단순히 신호만 증폭하거나 재생성합니다.
 
 
 ### 3.1.3. '꼼'은 잡음을 방지하기 위한 방법이다
@@ -61,8 +68,8 @@
 
 #### 외부 잡음의 억제
 - 외부에서 발생하는 잡음은 모터나 형광등, CRT 모니터 등에서 누설되는 전자파다.
-- 신호선을 꼬으면 유도 전류의 방향이 반대가 돼서 이런 잡음을 줄일 수 있다.
-    - 한 선에서 발생하는 유도 전류가 다른 선에서는 반대 방향으로 발생한다. 따라서 두 전류가 서로 상쇄되어 잡음을 줄일 수 있다.
+- 트위스티드 페어 케이블에서는 두 개의 신호선을 꼬아서 사용한다. 이로 인해 한 선에 유도되는 전류와 다른 선에 유도되는 전류가 서로 반대 방향으로 작용한다.
+    - 이렇게 반대 방향으로 작용하는 두 전류는 서로 상쇄되어 외부 잡음의 영향을 줄일 수 있다.
 
 #### 내부 잡음과 크로스토크
 
@@ -74,9 +81,13 @@
 
 #### 추가 대책과 케이블의 분류
 - 꼬는 간격을 다르게 해서 잡음의 영향을 줄일 수 있다.
-    - 간격을 다르게 꼬으면 각 신호선에서 유도되는 전류의 패턴도 달라진다. 이로 인해 다양한 유형의 잡음을 효과적으로 상쇄시킬 수 있다.
+    - 간격을 다르게 꼬으면, 해당 간격에서 발생하는 유도 전류의 주기나 세기가 달라진다. 
+    - 이로 인해 전자기적 간섭이나 크로스토크와 같은 다양한 유형의 잡음을 효과적으로 상쇄시킬 수 있다. 일반적인 잡음의 유형은 다음과 같다.
+        - [Electro Magnetic Interference](http://www.ktword.co.kr/test/view/view.php?nav=2&no=669&sh=EMI) : 다른 전자 기기나 전선에서 발생하는 전자파에 의한 간섭
+        - 라디오 주파수 간섭 : 무선 통신 장비나 브로드캐스트 신호와 같은 라디오 주파수에 의한 간섭
+        - [Impedance](http://www.ktword.co.kr/test/view/view.php?m_temp1=1276) 불일치 : 케이블이나 연결된 장비 간의 Impedance 차이로 발생하는 신호 반사
 - 추가로 신호선 사이에 구분판을 넣거나, 실드로 신호선을 감싸는 등의 대책이 있다.
-    - 이런 추가적인 물리적 장벽이 외부에서 들어오는 잡음을 줄여준다.
+    - 이런 추가적인 물리적 장벽이 외부에서 들어오는 잡음, 특히 전자기적 간섭을 줄여준다.
 - 다양한 대책으로 인해 성능이 다른 트위스트 페어 케이블이 시장에 판매되며, 카테고리로 성능을 구분한다.
     - 이들은 주로 전송 속도나 대역폭, 잡음 저항성 등에 차이를 보인다.
 
@@ -98,28 +109,23 @@
 
 
 ### 3.1.4. 리피터 허브는 연결되어 있는 전체 케이블에 신호를 송신한다
-
-#### 리피터 허브와 이더넷의 기본 원리
-- 신호가 리피터 허브에 도달하면, LAN 전체에 신호가 증폭되어 전송된다.
 - 리피터 허브는 패킷의 신호를 이더넷 네트워크 내의 모든 기기에 전송한다. 그 중에서 MAC 주소가 일치하는 기기만 해당 패킷을 수신한다.
 
 #### 커넥터와 PHY 회로
 - 각 커넥터의 안쪽에는 LAN 어댑터의 내부에 있는 PHY 회로와 유사한 회로가 있다.
 - 송신 단자에서 보낸 신호는 수신 단자에서만 받는다.
-    - 이는 PHY 회로의 디자인이 양방향 통신을 위해 별도의 송신과 수신 경로를 설정하기 때문이다.
-    - 네트워크 어댑터나 허브, 스위치 등에서의 통신은 전용 송신 단자(TX)와 전용 수신 단자(RX)를 통해 이루어진다.
-    - 전용 수신 단자는 송신 단자에서 오는 신호만을 처리하도록 구성되어 있어, 다른 단자에서 오는 신호는 무시한다.
+    - 송신 단자에서는 송신만 가능하며, 수신 단자에서는 수신만 가능하다.
 
 #### MDI/MDI-X와 커넥터 설정
 - 리피터 허브의 끝에는 MDI/MDI-X라는 전환 스위치가 있다.
-    - MDI(Media Dependent Interface) : RJ-45 커넥터와 송수신 회로를 직접 결선한 것으로, 일반적으로 네트워크 어댑터, 스위치, 라우터 등에서 사용된다.
-        - MDI는 **스트레이트 케이블** 을 사용해 연결될 수 있다.
-        - 스트레이트 케이블은 네트워크 케이블의 한 끝과 다른 끝이 동일한 방식으로 배선된 케이블을 말한다.
-    - MDI-X(Media Dependent Interface with Crossover) : MDI의 역방향으로, 송신과 수신 선이 교차된 형태이다.
-        - 이는 허브나 스위치에서 보통 사용되며, 이를 이용해 같은 종류의 디바이스를 연결할 수 있다.
-- 허브의 커넥터 부분은 주로 MDI-X로 설정되어 있어, 허브끼리 접속할 때는 한쪽을 MDI로 설정해야 한다.
-    - 이렇게 함으로써, 두 허브의 송신과 수신 선이 정확하게 맞물린다.
-- 모든 커넥터가 MDI-X인 경우에는 "크로스 케이블"을 사용해 허브들을 연결한다.
+- MDI(Media Dependent Interface) : RJ-45 커넥터와 송수신 회로를 직접 결선한 것으로, 일반적으로 네트워크 어댑터, 스위치, 라우터 등에서 사용된다.
+    - 스트레이트 케이블은 네트워크 케이블의 한 끝과 다른 끝이 동일한 방식으로 배선된 케이블을 말한다.
+    - 두 허브가 모두 MDI인 경우, **크로스 케이블** 을 사용하여 두 허브를 연결해야 한다.
+- MDI-X(Media Dependent Interface with Crossover) : MDI의 역방향으로, 송신과 수신 선이 교차된 형태이다.
+    - 이는 허브나 스위치에서 보통 사용되며, 이를 이용해 같은 종류의 디바이스를 연결할 수 있다.
+    - 송신과 수신 선이 교차되어 있기 때문에, 같은 종류의 디바이스 간의 연결이 가능한 것이다.
+    - 허브의 커넥터 부분은 대부분 MDI-X로 설정되어 있기 때문에, 허브끼리 연결하려면 한 허브의 스위치를 MDI로 설정해야 올바른 송수신 매칭이 가능하다.
+
 
 #### 크로스 케이블과 LAN 어댑터
 
@@ -133,9 +139,8 @@
     - 이렇게 하면, 한 어댑터의 송신 단자와 다른 어댑터의 수신 단자가 정확히 연결되어, 데이타 통신이 가능해진다.
 
 #### 신호의 증폭과 전송
-- 리피터 허브에서 수신한 신호는 리피터 회로를 거친다. 
-    - 리피터 회로는 신호의 증폭 및 전송을 담당한다.
-- 증폭된 신호는 연결된 모든 포트로 브로드캐스트되어, 리피터 허브에 연결된 모든 기기에 도달한다.
+- 리피터 허브에서 수신한 신호는 리피터 회로를 통해 증폭되고 전송된다.
+- 증폭된 신호는 리피터 허브에 연결된 모든 기기로 브로드캐스트된다.
 
 #### 패킷의 처리와 재전송
 - 수신한 기기는 MAC 헤더를 조사하여 자신이 수신처에 해당되면 신호를 수신하고, 그렇지 않으면 무시한다.
@@ -171,7 +176,9 @@
 
 #### 패킷의 송신
 - 패킷이 해당 포트로 중계될 때, MAC 및 PHY 회로는 패킷을 신호로 변환하여 케이블로 송신한다.
-- 스위칭 환경에서는 각 포트가 독립적인 충돌 도메인을 형성하므로, 이더넷의 초기 규칙과는 달리 패킷 충돌에 대해 걱정할 필요가 적다.
+- 스위칭 환경에서는 각 포트가 독립적인 충돌 도메인을 형성한다. 
+    - [충돌 도메인(Collision Domain)](http://www.ktword.co.kr/test/view/view.php?m_temp1=2490) : 네트워크에서 특정 영역 내에서 데이터 패킷이 동시에 전송될 때 충돌이 발생할 수 있는 영역이다. 
+- 따라서, 스위칭 환경에서는 이더넷의 초기에 비해 패킷 충돌 걱정이 훨씬 줄어든다.
 
 
 ### 3.2.2. MAC 주소 테이블을 등록 및 갱신한다
@@ -196,8 +203,6 @@
 - 그러나 실제 환경에서 리셋은 큰 영향을 줄 수 있으므로 최후의 선택으로 해야한다.
 > 실제 환경에서 스위칭 허브를 리셋하면 다음과 같은 문제나 영향이 발생할 수 있다.
 > - 통신 중단 : 리셋 동작은 잠시 동안 모든 포트에 대한 네트워크 통신을 중단시킨다. 이로 인해 진행 중인 데이터 전송이 중단되고, 네트워크 기반의 애플리케이션 또는 서비스가 일시적으로 사용할 수 없게 될 수 있다.
-
-> - MAC 주소 테이블 초기화 : 스위칭 허브의 리셋은 MAC 주소 테이블의 모든 항목을 삭제한다. 이후, 스위치는 다시 패킷을 수신하면서 테이블을 재구성해야 하므로, 일정 시간 동안은 최적의 스위칭 성능을 보장할 수 없다.
 
 > - 로그 또는 설정 손실 : 스위치에 로깅 기능이 있다면, 리셋으로 인해 최근의 로그 정보가 손실될 수 있다. 또한, 일부 스위치는 일시적인 설정 변경 사항이 메모리에만 저장되며 리셋 시에 이러한 변경사항이 손실될 수 있다.
 
@@ -296,4 +301,11 @@
 ---
 
 # 참고자료
-[Vol.74 통신 속도가 오르지 않을 때는 LAN 케이블의 카테고리를 바꾸어 보자](https://www2.elecom.co.jp.k.gj.hp.transer.com/network/wireless-lan/column/wifi_column/00074/)
+- [Vol.74 통신 속도가 오르지 않을 때는 LAN 케이블의 카테고리를 바꾸어 보자](https://www2.elecom.co.jp.k.gj.hp.transer.com/network/wireless-lan/column/wifi_column/00074/)
+- [Crosstalk](http://www.internex.co.kr/insiter.php?design_file=notice_v.php&article_num=20&PB_1247810668=3)
+- [캐패시턴스란?, 용량성 리액턴스란? capacitance, reactance 차이](https://information-factory.tistory.com/76)
+- [Twisted Pair Cables - Everything You Need to Know](https://community.fs.com/blog/twisted-pair-cables-everything-you-need-to-know.html)
+- [electromagnetic interference (EMI)](https://www.techtarget.com/searchmobilecomputing/definition/electromagnetic-interference)
+- [라디오, TV 및 전화 신호 간섭](https://www.fcc.gov/consumers/guides/radio-tv-mic-jeonhwa-sinho-ganseob)
+- [저항과 임피던스에 대해 알아보자](https://yyxx.tistory.com/139)
+- [MDI; Medium Dependent Interface - kt정보통신기술용어해설](http://www.ktword.co.kr/test/view/view.php?nav=2&no=2026&sh=MDI)
