--- a/Invidam/6주차.md
+++ b/Invidam/6주차.md
@@ -81,7 +81,7 @@
 Netmask가 `0.0.0.0`인 행은 기본경로로써, 일치하는 행이 없는 경우 해당 행의 게이트웨이로 중계가 일어난다.
 
 ### 스위칭 패브릭(Switching Fabric)
-앞서, 입력 포트로 들어온 패킷이 출력 포트로 매핑한다고 언급하였다. 이를 주관하는 장치가 스위칭 패브릭이다.
+앞서, 입력 포트로 들어온 패킷이 라우터 프로세서에 의해 출력 포트로 매핑된다고 언급하였다. 이를 주관하는 장치가 스위칭 패브릭이다.
 
 매핑 방식에는 3가지 방식이 있으며, 고성능이 필요한 경우 Crossbar 방식을 사용하고 일반적인 경우는 Shared Memory, Bus 방식을 택한다고 한다.
 
@@ -160,6 +160,7 @@ NAT의 동작에 대해 살펴보자.
 
 - 송수신 동작이 끝난 후, 테이블의 등록된 정보를 삭제한다.
 - 여러 사용자가 사용할 수 있도록 하기위해 포트번호 또한 변환한다.
+  - 이처럼, 다양한 IP의 사용자가 하나의 공인 IP로 매핑하고, 공인 IP의 포트 번호로 변환하는 기술을 PAT라고 한다. 
 
 ### 패킷 필터링
 악의적인 목적을 가진 공격자가 라우터 내부에 존재하는 컴퓨터에 접근하려고 한다고 가정하자. 자세하게는 웹 서버를 털기 위해 `65.06.14.76:80`으로 공격을 하려고 한다고 하자. 위 그림을 살펴보면 80번 포트번호가 NAT Table에 존재하지 않는다. 만약 공격을 하려하더라도 공격자의 패킷은 폐기(필터링)될 것이다. 이처럼 NAT는 방화벽과 같은 역할도 수행한다.
